--- a/02_정당과 역사.md
+++ b/02_정당과 역사.md
@@ -26,21 +26,104 @@
 ## 지금까지의 국회의원 총선거
 
 ## 민주당계 정당 
+
+
+여기에 보수주류 정당의 집권기에는, 행정부 차원에서 사상의 다양성을 인정하지 않는 정책(한국사 교과서 국정화, 
+
+
 ### 더불어민주당 - 민주당게 주류정당
 ### 민생당 - 민주당계 전라권 제3정당
 ### 열린민주당 - 민주당계 비례정당
 
+### 눈여겨볼 선거
+
+#### 서울 영등포구 을
+
+#### 서울 강남구 갑
+
+#### 부산 연제구
+
+#### 충남 공주시-부여군-청양군
+
+#### 광주 서구 을
+
+
+
+
+
 ## 보수주류 정당
+**
+
+1948년의 대한민국 정부수립 이후, 보수주류 정당은 대부분의 기간동안 집권당의 위치를 차지하며 한국 사회의 ‘보수’이자 ‘주류’로 자리잡았다. 물론 1987년 민주화 이전까지, 보수주류 정당이 대통령 1인을 중심으로 한 권위주의 독재정권을 통해 집권했다는 것은 부정할 수 없다. 이승만의 자유당, 박정희의 민주공화당, 전두환과 노태우의 민주정의당으로 이어지는 약 40년의 기간동안, 보수주류 정당은 쿠데타와 당내 세력 숙청 등 폭력적인 방법을 거쳐서(?) 새로운 수뇌부를 수혈받았다. 이 교체 과정에서 한국 사회의 개발을 주도한 관료, 군인, 학자, 기업가 등이 보수주류 정당을 통해 정계에 입문했던 것도 사실이다. (보수주류 정당의 집권이 영원히 계속될 것 같았다는 배경도 이해해 주자.) 그럼에도 불구하고, 당원의 구성, 수뇌부와 거리가 먼 일반 정치인의 구성, 지역조직 등은 별다른 변화 없이 계승되어, 보수주류 정당이라는 정체성을 유지할 수 있었다.
+
+보수주류 정당의 이념과 정책지향 역시, 과거 독재정권 시절의 가치를 유지하며 시대에 맞추어 조금씩 변형하는 형태를 취하고 있다. 북한과의 대립과 한미동맹을 중심으로 하는 외교안보정책, 정부의 시장경제 불간섭주의, 대기업 성장 중심의 경제정책, 최저임금 인상 및 노동시간 단축 반대, 복지정책 확대 및 정부재정 확대지출 반대, ‘동성애 및 동성혼’ 반대 등의 입장을 취하고 있다. 
+
+현재의 보수주류 정당이 완성된 계기는, “3당 합당 ”이라고 불리우는 1990년의 1월의 사건이다. 2기 군사정권의 수뇌부(노태우)가 주축이 된 민주정의당(당시 전체 299석 중 128석), 1기 군사정권의 수뇌부(김종필)가 주축이 된 신민주공화당(35석), 그리고 민주당계 정당의 오랜 리더(김영삼)가 주축이 된 통일민주당(60석)의 합당이 갑자기 발표되었다. 과반 의석의 정당 없이 `4개의 정당(김대중이 주축이 된 평화민주당(71석)을 포함한다.)`이 균형을 이루던 상황을 해소하기 위해, 이른바 ‘보수 대연합’의 가치를 내걸고 합당을 진행했다. 3당 합당을 통해 보수주류 정당은, 이념적으로는 자유주의와 좌파를, 지역적으로는 전라권을 고립시키며 패권을 차지한다. 3당 합당 이후 30년 동안 몇 번에 걸친 합당과 분당이 있었지만, 3당 합당으로 형성된 보수주류 정당의 구성은 지금까지도 큰 변화 없이 이어지고 있다. 
+
+하지만 ‘보수’라는 너무 모호한 가치를 내세우며 다양한 사람들이 합류함에 따라, 보수주류 정당은 현재에도 당내 계파 경쟁을 수시로 거치고 있다. 이는 단순한 당내 지분 경쟁을 넘어서, 보수주류 정당의 이념 지향을 결정하는 중요한 문제였다. 3당 합당 직후에는 민주당계 정당 출신의 ‘민주계’가 군부정권에 참여한 ‘민정계’와 ‘공화계’를 제치고 당 주도권을 잡으면서, 보수주류 정당이 군부정권의 비리와 학살 문제를 조사하고 단절하는 데에 직접 참여하기도 했다(6권 ‘남부지방 권역’, p.XXX 참고). 2007년의 대통령 후보 경선에서 맞붙은 이명박과 박근혜의 대결 이후에도, 이명박 행정부의 충청권 행정도시(지금의 세종특별자치시) 사업 중단 계획을 당내 친-박근혜계가 반대하여 막아낸다던가, 유승민 원내대표 시절의 새누리당이 박근혜 대통령의 부동산 중심 경제정책을 비판하고 각을 세우다가 친-박근혜계의 압박에 의해 퇴진하는 등의 모습을 보였다. 박근혜 대통령의 탄핵에 찬성하는 새누리당 의원들이 대거 탈당하여 한때 “개혁적인 보수정당 ”(바른정당->바른미래당)을 결성했던 것 역시 이러한 계파 경쟁의 연장선이라고 볼 수도 있다.
+
+
 ### 미래통합당 - 보수주류 정당
+
+
+
 ### 미래한국당 - 반헌법(?) 보수주류 비례정당
 
+
+### 눈여겨볼 선거
+
+#### 서울 강서구 을, 구로구 을
+**미래한국당 서울시당 최후의 보루**
+
+2010년대에 서울의 보수주류 정당 중진들이 우수수 낙선한 탓에, 3선의 김용태(양천구 을)와 김성태(강서구 을)는 나경원(3권 ‘위원회와 주요 이슈(1)’, p.XXX 참고)과 함께 서울지역 중진 의원으로 입지가 격상되었다. 김용태와 김성태는 2008년부터 같은 지역구에서 3선을 했고, 2017년에 보수개혁 정당(바른정당) 창당에 주도적으로 참여했다가 자유한국당으로 복당했다. 이 때의 당적변경으로 많은 유권자에게 비난받았으나, 정작 자유한국당 안에서는 ‘박근혜 복권파’를 비롯한 당의 극우파를 견제할 몇 안되는 인물이라고 기대받았다. 실제로 두 의원은 2018년에 각각 자유한국당 사무총장과 원내대표를 맡았고, 당의 2018년 지방선거 패배를 수습하는 데에 나름의 역할을 했다고 평가받는다.
+
+2020년 총선을 앞두고 김성태는 불출마를 선언했고, 김용태는 민주당계 정당(박영선)이 3연승한 구로구 을 지역구로 자리를 옮긴다. 만약 김용태와 김성태의 전현직 지역구에서‘조차도’ 미래통합당이 패배한다면, 이 결과는 미래통합당이 서울에서의 대중성을 완전히 잃어버렸고 이를 회복할 인물마저 없어졌다는 증거처럼 여겨질 것이다. 반대로 이들의 작전이 성공한다면, 이들은 향후 미래한국당의 서울 수복을 최전선에서 이끌 것이다. 지역기반이 서울이거나 중도보수적 입장을 가진 미래한국당 정치인들은 이번 선거에서 세 지역구에서 반드시 이기기를 간절히 기원할 것이다.
+
+
+#### 부산 남구 을
+
+#### 대구 수성구 갑
+
+#### 경기 성남시 분당구 갑/을
+** **
+수도권에서 진격의 민주당을 보여주는 
+
+
+
+
 ## 제3세력 정당
+**한국에는 규모 있는 제3세력 정당이 거의 언제나 존재했다. 총선을 통해 제3세력으로 떠오른 정당이 민주당계/보수주류 정당에 어떤 입장을 보이느냐에 따라, 정국은 요동칠 것이다.**
+
+한국에서 “제3세력 ”이라고 불리운 정당들이 있다. 국회에서 가장 많은 의석을 가지는 2개의 정당(민주당계 정당과 보수주류 정당), 통칭 ‘거대 양당’을 제외하고, 20~30석 내외의 의석을 확보하여 정계에 영향력을 끼치는 정당들을 말한다. 제3세력 정당은 보통 3가지 요인으로부터 탄생한다. 첫째, 특정 지역의 지역구 후보들이 지역주의를 바탕으로 당선되기 위해 지역주의 정당을 창당한다. 둘째, 차기 대통령 후보로 주목받지만 당 조직이 없는 정치인이 기존 정치인과 외부인사를 모아서 창당한다. 셋째, 거대 양당이 당내 중진의원이나 특정 계파를 공천에서 대거 탈락시킬 때, 탈락한 후보들이 당을 급히 결성한다. 이상의 요인들에서 보듯, 제3세력 정당 역시 창당 원리나 구성원의 면면을 보면 거대 양당과 큰 차이점을 보이지 않는다. 
+
+그러나 제3세력 정당의 의미는 정당의 존재 자체에서 찾을 수 있다. 민주화가 이뤄진 1987년 이후 8번의 국회의원 선거에서, 과반 의석을 차지한 정당이 등장한 경우는 3번(2004년 열린우리당: 152석, 08년 한나라당: 153석, 12년 새누리당: 152석)에 불과했고, 그 때에도 불과 2~3석 차이의 불안정한 과반을 기록했다. 따라서 제3세력 정당이 국회에서 맡는 역할에 따라, 그 국회가 통과시키는 법률안이나 예산안의 정책적 지향점이 크게 달라진다. 의정활동 과정에서, 제3세력 정당이 거대 양당 중 하나와 연합하거나, 혹은 거대 양당의 갈등을 원만하게 중재하면서 자신의 지향성과 존재감을 얼마나 드러낼 수 있다.
+
+한국에서 “제3세력 ”이라고 불릴 수 있는 첫 번째 정당은 민주화 직후인 1987년에 창당한 신민주공화당이다. 이 당의 총재였던 김종필은 1기 군사정권(박정희)의 2인자였으니 민주당계라고 볼 수는 없고, 2기 군사정권(전두환)에는 일체 협력하지 않았기에 당시 집권당인 보수주류 정당(민주정의당)과도 다른 소위 ‘정통 보수’를 내세울 수 있었다. 게다가 지역주의 측면에서도, 당시 충청권 유일의 대선주자급 정치인이라는 기반이 있었다. 신민주공화당은 1987년 대선에서 김종필을 내세워 득표율 8.1%, 1988년 총선에서 35석을 차지했다. 김종필은 3당 합당을 통해 잠시 보수주류 정당에 몸담았다가 1995년 다시 자유민주연합(약칭 ‘자민련’)을 창당했는데, 1996년 총선에서 50석을 획득하고 민주당계 정당과 연합하여 김대중을 대통령에 당선시켰고, 김종필이 국무총리를 맡으며 공동집권한다. 지금까지 한국에서 제3세력 정당이 가장 큰 영향력을 끼친 사건이었다. 
+
+이 외에도 제3정당으로서 존재감을 드러낸 정당들을 살펴보자. 1992년 총선에 등장한 통일국민당은 현대그룹(당시 재계 1위) 회장인 정주영이 대선 출마를 위해 창당한 정당이었다. 전국적으로 비교적 고르게 의석을 얻으면서 31석을 확보했으나, 정주영이 92년 대선에서 낙선하고 정계은퇴하자마자 소속 의원들이 각 정당으로 뿔뿔이 흩어졌다. 2008년 총선에 참여한 자유선진당은 07년 대선후보 `이회창(이회창은 1997/2002년 대선의 보수주류 정당(한나라당) 후보였으나, 2007년에는 무소속으로 독자출마한다.)`과 충청권 지역기반의 지역구 후보들이 연합하여 다시금 충청권 제3정당을 꾸린 것이다. 당시 18석을 확보하며 제3당의 위치를 차지했으나, 2012년 총선에서 5석으로 줄어들며 보수주류 정당(새누리당)에 흡수통합된다. 
+
+21세기부터 한국의 정당정치는 이념과 정책성향에 따라 변화하였고, 이에 따라 대선후보 또는 지역기반이 바탕이 되는 제3세력의 존재감도 점점 줄어들었다. 그러다가 2016년 총선에서, 국민의당(2016년 창당)이 독보적인 제3정당으로 떠올랐다. 국민의당은 유력 대선주자인 안철수가 자신의 지지세력을 모으려는 시도, 그리고 민주당계 의원들 중 전라권의 지을 중심으로 독자세력을 모으려는 시도의 이해관계가 맞아떨어지며 창당되었다. 전라권을 중심으로 지역구 25석을 얻고, 비례대표 전국득표율은 민주당계 정당(더불어민주당)을 앞서며 26.74%를 기록, 13명의 비례대표가 당선되었다. 거대 양당이 모두 의석수가 120석 내외에 머무른 상황에서 38석짜리 제3세력의 등장은 큰 지각변동이었다. 
+
+그 이후 4년간, 국민의당은 당의 방향성을 놓고 큰 갈등을 겪었다. 박근혜 대통령 탄핵을 찬성한 보수정당 출신 세력과 통합할 것인가, 아니면 민주당계 정당의 정체성을 유지한 세력으로 남을 것인가? 문재인 행정부 및 더불어민주당과 어느 단계까지 협력하고, 어느 단계까지 견제할 것인가? 이 문제를 두고 당내 의견이 갈리면서 분당과 합당을 거듭하여, 일부는 보수주류 정당으로, 일부는 민주당계 정당으로, 일부는 여전히 제3세력 정당으로 진로를 결정하고 2020년 총선을 준비하고 있다. 현재 “제3세력 정당 ”이라고 분류할 수 있을 정당은 2개가 존재한다. 
+
 ### 민생당 - 민주당계 전라권 제3정당
-### 국민의당 - 
+앞서 “민주당계 정당 ” 부분에서 설명(p.XXX)한 그 민생당이 맞다. 민생당은 민주당계 정당이자, 전라권 제3정당이라고 분류할 수 있다. 2016년의 국민의당 소속 의원 중, 전라권에 기반을 둔 민주당계 정당 출신 세력이 중심이 되었다. 박지원, 정동영, 박주선, 천정배 등 과거 
+
+### 국민의당(2020년) - 대선후보 중심 제3정당
+만약 당신이 2016년 총선에 투표하고 4년 만에 다시 선거에 관심을 가지고 있다면 - 환영한다. 4년 전의 “국민의당 ”과 다른 새로운 “국민의당 ”이 2020년에 탄생했다. 이 신생 국민의당은 2016년의 국민의당 소속 의원 중에서, 대선후보 안철수와의 연결성이 강한 인물들이 중심이 되었다. 이태규(비례대표) 등의 비례대표, 또는 권은희(광주 광산구 을)처럼 전라권 지역구를 가지고 있지만 민주당계 정당에서의 활동이 길지 않았던 인물들이 창당에 참여했다. 
+
+현재의 당대표는 안철수다. 한국 정치사에서 안철수가 가지는 의미는 매우 독특하다. 한국의 제3세력 대선주자는 보통 한 번의 대통령 선거 이후 빠르게 인기를 잃었다. 하지만 안철수는 (아무리 기간을 짧게 잡더라도) 2011년부터 2018년까지는 유력 대선주자로 인정받은 긴 생명력을 가지고 있다. 2020년에 국민의당이 `안철수의 이름을 내걸고(국민의당(2020년)이 처음 고려했던 이름은 “안철수신당 ”이었으나, 한국 중앙선거관리위원회가 이 명칭을 허가하지 않았다.)` 정당을 창당하려고 했던 배경이 여기에 있다. 
+
+2020년 3월 현재, 국민의당은 중도-보수적인 유권자들의 비례대표 정당투표를 위한 정당으로 재편되는 것으로 보인다. 2020년 국민의당 창당에 참여했던 비례대표 국회의원 중 상당수(신용현, 김수민, 김삼화)가 보수주류 정당(미래통합당)으로 이적하여 지역구 선거에 참여하고 있으며, 국민의당 역시 지역구에 공천하지 않고 비례대표만 출마시키기로 결정하였다. 이렇게 되면, 미래통합당으로 합류한 중도-보수적 후보들은 지역구에서 개별적으로 선거운동을 하고, 이들이 당선된 이후 국민의당의 비례대표 의원들과 협력하는 방식으로 활돌할 가능성이 있다. 
+
 
 
 ## 사민주의 진보정당
-20세기 내내 한국의 중앙정치는 국가적인 거대담론만이 중요한 의제였다. 국가안보, 경제성장, 반독재, 사회안정, 통일, 외교안보 등등 만이 정치의 중요 의제였고, 대부분 정당이 이 의제 안에서 크게 다르지 않았다. 따라서 대부분의 정치인들은 거물급 정치인 두세 명의 입장만을 바라보며 자신의 행보를 정하곤 했다. 따라서 노동자와 사회적 소수자의 주장을 앞세우며 2000년대 이후 한국에 등장한, 사회경제적 평등과 개인의 인권을 민주주의 체제를 통해 쟁취하겠다는 ‘사회민주주의’(사민주의) 정치세력은 한국 정치에 신선한 충격을 안겨줬다.
+**“인간이 인간답게, 사회가 평등하게, 노동이 아름답게, 민중이 주인되게. ” 민주노동당 당가의 가사에서 느끼는 충격처럼, 사민주의 정당은 등장과 존재 자체만으로도 중앙정치의 작동방식을 근본적으로 뒤바꿨다.**
+
+20세기 내내 한국의 중앙정치는 국가적인 거대담론만이 중요한 의제였다. 국가안보, 경제성장, 반독재, 사회안정, 통일, 외교안보 등등 만이 정치의 중요 의제였고, 대부분 정당이 이 의제 안에서 추구하는 방향성과 가치가 크게 다르지 않았다. 따라서 대부분의 정치인들은 거물급 정치인 두세 명의 입장만을 바라보며 자신의 행보를 정하곤 했다. 
+
+노동자와 사회적 소수자의 권리를 지키겠다며 2000년대에 한국에 등장한, 사회경제적 평등과 개인의 인권을 민주주의 체제를 통해 쟁취하겠다는 ‘사회민주주의’(사민주의) 정치세력은 한국 정치에 신선한 충격을 안겨줬다. 민주당계, 보수주류, 제3세력 정당이 모두 아무리 늦어도 1960년대부터 정치를 시작한 세력이 주축이 되었다면, 사민주의 정당은 반공을 부르짖던 독재정권에 의해 가혹하게 탄압받다가, 상대적으로 최근인 90년대 말부터 제도권 정치에 입문할 수 있었다. 따라서 당시의 문제로 떠오르기 시작한 사회문제들, 예를 들면 노동자의 부당해고와 산업재해 문제, 최저임금 문제, 여성 및 성소수자의 성평등 문제, 의료 및 교육의 평등과 무상화, 국가가 개인의 삶을 책임지는 복지국가 이슈 등을 선도적으로 내세울 수 있었다.
 
 해방 및 공화국 수립 이후, ‘혁신계’라고 불리던 사회민주주의 성향의 거물 독립운동가와 정치인들이 연이어 정당을 창당했으나, 모두 단명했다. 여운형의 근로인민당은 여운형이 암살당하며 해산되었다. 조소앙은 사회당을 창당하여 1950년 총선에서 전국 최다득표자(서울 성북구, 66.6%)로 당선되었으나, 1달 뒤 한국전쟁이 터져 납북되어 당이 공중분해되었다. 이승만 행정부 초대 농림부장관으로 농지개혁(지주가 독점한 농경지를 정부가 헐값에 몰수하여, 실제 농사를 짓는 농민에게 싼 값에 균등하게 배분하는 정책)을 주도했으며 1956년 대선 후보로 30%의 득표율을 올린 조봉암은 1958년 진보당을 창당했으나, 조봉암은 이승만 행정부에 의해 북한이 파견한 간첩이라는 누명을 쓰고 사형당한다. 이후에도 여러 군사정권의 탄압으로 사민주의 정당은 전혀 자리잡을 수 없었다. 1987년 민주화를 통해 이른바 ‘민중 정치세력’이라고 불리우는 세력이 등장하였으나, 역시나 정치세력으로서 기반이 취약해 한 번의 총선을 치르고 해산되는 일을 반복했다. 이 과정에 참여했다가 낙선한 이재오, 김문수 등이 김영삼의 영입제안을 받아서 보수주류 정당에 입당하기도 했다. 
 
@@ -51,7 +134,7 @@
 ### 정의당 - 사민주의 주류정당
 2012년에 창당한 정의당은 현재 제도정치권에서 세력이 가장 큰 사민주의 정당이다. 노회찬과 심상정으로 대표되는 중앙정치인, 무상급식/무상의료 등 주민복지 관련 시민운동을 주도한 지역정치인, 노무현 행정부에 집권세력으로 참여한 정치인, 그리고 외부영입 전문가 출신 정치인 등으로 구성되어 폭넓은 활동영역을 자랑하고 있다. 특히 2017년 대선에서 심상정 후보가 202만 표(득표율 6.17%)을 기록한 것은 사민주의 정당 역사상 가장 큰 성과로 남아있다. 이 때문에 대중적 인지도도 제일 높고, 국회와 지방의회 의원의 숫자도 제일 많다.
 
-이는 사민주의 정당으로서 장점이자 단점으로 작용하고 있다. 장점이라면, 국회를 비롯한 중앙정치에서 목소리의 영향력이 제일 크다는 것이다. 민주당계, 보수주류, 보수적 제3세력 정당들과의 협상을 통해 주요 의제를 관철시킬 수 있고, 중앙정치에서 사회적 약자가 대변되는 몇 안되는 창구 역할을 한다. 2016-2020 국회에서 어렵게 통과시킨 산업안전보건법 개정안(통칭 ‘김용균법’), 공직선거법 개정안 등이 그 성과이다. 하지만 인적 구성의 폭이 넓은 것은 단점도 된다. 이슈에 따라 당내 여론이 다양하여 갈등이 생길 수 있고, 정당과의 협상에 참여하는 과정에서 ‘소수정당임에도 지지해야 하는 이유’인 독창적 정체성을 잃을 수 있다는 것이다. 조국 전 법무부장관 임명 국면에서, 이 이슈를 바라보는 관점(검찰개혁과 사회불평등의 문제)을 놓고 당내 갈등이 깊어져 당 차원의 입장을 보여주지 못한 것이 그 예시이다. 
+이는 사민주의 정당으로서 장점이자 단점으로 작용하고 있다. 장점이라면, 국회를 비롯한 중앙정치에서 목소리의 영향력이 제일 크다는 것이다. 민주당계, 보수주류, 보수적 제3세력 정당들과의 협상을 통해 주요 의제를 관철시킬 수 있고, 중앙정치에서 사회적 약자가 대변되는 몇 안되는 창구 역할을 한다. 2016-2020 국회에서 어렵게 통과시킨 <산업안전보건법> 개정안(통칭 ‘김용균법’), <공직선거법> 개정안 등이 그 성과이다. 하지만 인적 구성의 폭이 넓은 것은 단점도 된다. 이슈에 따라 당내 여론이 다양하여 갈등이 생길 수 있고, 정당과의 협상에 참여하는 과정에서 ‘소수정당임에도 지지해야 하는 이유’인 독창적 정체성을 잃을 수 있다는 것이다. 2019년 하반기의 조국 전 법무부장관 임명 국면에서, 이 이슈를 바라보는 관점(검찰개혁과 사회불평등의 문제)을 놓고 당내 갈등이 깊어져 당 차원의 입장을 보여주지 못한 것이 그 예시이다. 
 
 ### 민중당 - 민족주의 좌파정당
 2015년에 창당(당시 이름 ‘민중연합당’)한 민중당의 전신에 대해서는 의견이 다양하지만, 당 지도부나 공직선거 후보의 많은 수가 과거 `통합진보당(2011년에 창당되었으며, 2012년 총선의 당내 비례대표 후보 경선에서 정파별 부정선거 문제의 처리를 두고 입장이 갈라져서, 현재의 정의당과 분당되었다. 내란선동 혐의로 유죄판결을 받은 이석기 의원 문제와 당헌에 적힌 ‘진보적 민주주의’가 북한체제의 이론과 유사하다는 석연찮은 이유로 인해, 2014년 박근혜 행정부가 정당해산을 청구하고 헌법재판소가 이를 받아들이며 강제해산된다.)` 출신이다. 이들은 민주노동당 시절부터 지역구 단위로 주민조직이나 시민운동세력과 밀착하는 방식으로 활동했고, 이는 민주노총(전국민주노동조합총연맹), 전농(전국농민회총연맹) 등 규모가 큰 전국단위 조직에서 민중당 지지세를 키우는 데에 도움이 되었다. 따라서 민중당은 중앙정치에서의 열세와 무관하게 지역구 선거, 특히 대기업 생산직 노동자와 농민이 많은 지역구에서 강세를 보였다. 
@@ -60,21 +143,93 @@
 ### 노동당 - 선명 사민주의 정당
 노동당 역시 2000년대부터 합종연횡의 역사가 복잡하지만, 현재로서는 과거 민주노동당 참가 세력 중 ‘투쟁현장’에 가장 적극적으로 참여하는 성향이 남아있다고 볼 수 있다. 이러한 성향은 수도권의 철거현장에 대한 연대활동, 제조업 공장이 많은 경남권에서 노동운동과의 결합 등, 노동당의 여러가지 활동을 통해 확인할 수 있다. 제도정치 바깥의 운동과 결합이 많음에 따라 더 급진적인 주장을 하게 되어, 노동당 당원들은 비슷한 성향의 정의당 당원들에 비해서도 노동운동, 빈민 문제 등에 있어서 더 선명한 주장을 내놓곤 한다. 
 
-그러나 이것이 제도정치로 연결되지 않는 상황에서, 일반 유권자의 관점에서는 당세가 점점 줄어든다는 느낌을 받을 것이다. 실제로 2010년대 3~ 4차례의 집단탈당 상황을 거치면서, 노동당 안에서 제도정치에 참여하거나 (기본소득과 같은) 대중적 정책방향성을 제시하려고 시도한 정파 상당수가 다른 정당으로 집단입당하거나 별도로 창당하는 형태로 대부분 빠져나가고, 이에 따라 공직선거에서의 활동만을 놓고 보면 후보 숫자가 점점 줄어드는 등 동력이 떨어지고 있다. 
+그러나 이것이 제도정치로 연결되지 않는 상황에서, 일반 유권자의 관점에서는 당세가 점점 줄어든다는 느낌을 받을 것이다. 실제로 2010년대 3~ 4차례의 집단탈당 상황을 거치면서, 노동당 안에서 제도정치에 참여하거나 (기본소득과 같은) 대중적 정책방향성을 제시하려고 시도한 정파 상당수가 다른 정당으로 집단입당하거나 별도로 창당하는 형태로 대부분 빠져나가고, 이에 따라 공직선거에서의 활동만을 놓고 보면 후보 숫자가 점점 줄어들고 있다. 현재 노동당은 경남권, 전라권 등의 제조업 노동자 세력의 득표력을 바탕으로 나머지 사민주의 정당과의 연대와 경쟁을 진행하는 수준을 유지하고 있다.
+
+
+### 눈여겨볼 선거
+
+
+#### 인천 연수구 을, 경기 고양시 갑
+**사민주의 정당 비례 1번의 신화**
+
+이정미(2016년 정의당 비례 1번 후보)의 연수 을 출마를 통해, 심상정(2004년 민주노동당 비례 1번 후보) 이후로 `12년 만에(2008년 민주노동당 비례 1번 곽정숙은 2012년에 불출마. 2012년 통합진보당 비례  1번 윤금순은 당선 직후, 경선 부정 논란에 따른 후보 총사퇴 때 함께 사퇴.)` 사민주의 정당의 비례 1번이 지역구에서 재선에 도전한다. 비례대표를 통해 의정활동을 경험한 사민주의 정당 후보가 지역구에 등장하는 것은, 지역 전체 여론지형을 뒤집을 수 있는 문제다. 심상정
+
+#### 경남 창원시 성산구
+
+
+#### 울산 동구, 북구
+
+
+#### 경기 안양시 동안구 을, 경북 경주시
 
 
 ## 극우정당 및 종교정당
-### 자유공화당 - 친-박근혜 극우정당
-### 친박신당 - 친-박근혜 극우정당
-### 기독자유당 - 개신교 계열 극우정당
+**대다수 유권자의 생각이 갑자기 변화하면, 이를 완강하게 거부하는 유권자에게는 ‘극우’라는 평가가 따라온다. 따라서 정치격변의 시기에는 극우의 몸집이 커지게 된다.**
 
-## 원외 진보정당
+정체를 알기 어려운 독불장군형(?) 군소정당은 한국에서도 언제나 있었다. 이들은 주로 기존 정치권과 정치인이 부패하고 무능하다거나, 나라를 구해야 한다는 주장만을 내세웠으며, 그 불신을 당명에 담아냄으로서 지지를 얻어내려고 했지만 언제나 실패했다. “무당파국민연합 ”과 “21세기한국독립당 ”(이상 1996년 총선), “가자희망2080 ”과 “노년권익보호당 ”(이상 2004년 총선) 등이 그런 경우에 해당되었다. 
+
+지금 우리가 떠올리는 “극우정당 및 종교정당 ”의 이미지를 가진 정당은 2008년부터 만들어지기 시작했다. 보수주류 정당의 공천에서 탈락한 친-박근혜 성향 정치인들이 급히 창당한 친박연대가 13.18%의 비례대표 정당득표율, 14명의 당선자를 배출한 것이 가장 큰 신호였다. 이 때의 당선자 대부분이 나중에 보수주류 정당으로 다시 합류하면서 친박연대 자체는 극우 성향을 오래 가져가지 못한다. 그럼에도 불구하고, 이 결과는 박근혜라는 정치인에 대한 지지, 그리고 여기에서 이어져 내려오는 박정희에 대한 향수가 엄청난 양의 득표로 이어진다는 증거라는 의미가 있다. 이 사건은 9년 뒤 박근혜 대통령의 파면 직후, 많은 극우정당이 친-박근혜 성향을 내걸며 중앙정치에 영향력을 발휘하려고 하는 근거가 된다. 
+
+이것 뿐이 아니다. 2008년에 특별히 강렬한 인상을 남겼던 당은 통일교 교단이 조직한 평화통일가정당으로, 전국의 245개 모든 지역구에 후보를 낸 `유이한 정당(다른 하나는 한나라당(보수주류 정당)이었다. 통합민주당(민주당계 정당)이 197명, 사민주의 정당(민주노동당)이 103명의 후보를 냈다.)`이었다. 그 외에도 기독당이 비례대표 정당투표에서 2.59%의 득표율로 비례대표 당선에 아깝게 실패하기도 했다. 이 때부터 극우성향 종교계의 정치세력화 가능성이 진지하게 논의되었던 것으로 추정된다. 
+
+극우와 종교계의 정치세력화는 2016년 총선을 전후하여 더욱 분명하게 드러난다. 민주당계 정당(더불어민주당) 공천에서 탈락한 당시 현역의원 이윤석(전남 영암군-무안군-신안군)이 비례대표 입후보를 위해 기독자유당에 입당(후 낙선)함으로서, 2개월 남짓이지만 종교정당이 최초로 국회에 진출하는 쾌거(?)를 이루었다. 또한 박근혜 대통령 파면 직후, 탄핵 반대를 주장하는 극우정당이 연이어 창당하고, 보수주류 정당 국회의원의 일부가 입당하여 당 지도부를 맡기도 했다. 여기에 정치세력화를 추진하던 극우계열 개신교 교단도, 자체적인 개별 종교정당 또는 극우정당에 참여하는 방식으로 연합을 꾀했다. 이들이 지속가능한 정치세력으로 유지될 수 있을지는, 이번 2020년 총선 결과를 통해 가늠할 수 있을 것이다. 
+
+
+
+### 자유공화당, 친박신당 - 친-박근혜 극우정당
+친-박근혜 극우정당의 기원은, 2017년 박근혜 대통령의 탄핵 직후 ‘대통령 탄핵무효 국민저항총궐기 운동본부’(약칭 ‘탄기국)가 창당한 `새누리당(보수주류 정당인 한나라당이 2012년에 이름을 바꾼 ‘원조’ 새누리당과 다르다.)`이었다. 그 급박한 상황에서도 현역 국회의원 조원진이 입당하여 2017년 대통령 선거 후보로 출마하였으며, 이후 치열한 당내 계파투쟁과 분당과 합당을 거듭했다. 그 와중에도 이들은 주말마다 전국 각지에서 대규모 태극기 집회를 조직하여, 당원들의 결속과 대외 영향력을 발휘하는 것으로 유명했다.
+
+2017년의 새누리당에서 기원한 정당은 2020년 현재 2개의 원내 정당으로 분화되었다. 자유공화당은 조원진 대표를 비롯하여, 별도의 창당을 준비하다가 2020년에 합당한 김문수, 전광훈, 그리고 보수주류 정당에서 공천 탈락 후 합류한 서청원, 김순례 등으로 구성되었다. 반대로 일찍이(2019) 보수주류 정당에서 탈당하고 합류했던 홍문종은 당내 주도권 다툼에서 밀려나자, 자유공화당에서 탈당하여 친박신당을 새로 창당한다. 
+
+### 기독당, 기독자유통일당, 대한당 - 개신교 계열 극우정당
+2016년 총선 당시 3개의 개신교 계열 극우정당이 각각 후보를 출마시켰다. 당시의 기독당과 기독자유통일당(당시 “기독자유당 ”)과 대한당(당시 “진리대한당 ”)은 “반-이슬람, 반-동성애 ”를 공통의 스탠스로 취했으며, 여기에 정당의 관심사에 따라 ‘종북좌파 타도’나 ‘핵무장’, ‘차별금지법 반대’ 등의 스탠스가 섞여들어갔다. 비슷한 배경과 이념을 가진 이들이 서로 다른 당으로 나뉘어진 이유는, 각 정당을 구성하는 목사 및 선교사들의 개신교계 내에서의 갈등이었던 것으로 보인다. 
+
+이들은 2016년 총선에서, 비례대표 정당투표의 득표율이 모두 3% 미만이라서 국회의원을 당선시키는 데 실패했다. 다만 세 정당의 득표율을 모두 합하면 3%를 넘었기 때문에, 극우정당의 탄생을 경계하는 유권자들은 향후 이들 정당이 원내에 진입할 가능성을 상당히 우려하기도 했다. 박근혜 대통령 탄핵 이후, 개신교 극우정당이 본격적으로 태극기 집회와 결합하고 극우세력 내의 비중있는 연대체로 인정받으면서, 원내 진입의 가능성은 더욱 커졌다. 
+
+### 눈여겨볼 선거
+
+#### 대구 달서구 병
+
+#### 경기 화성시 갑
+
+#### 경북 김천시 (비례)
+
+
+
+## 신진 원외 진보정당
+**입법과 행정이 사회의 변화상을 따라오지 못해서 사회문제가 발생할 때, 유권자는 이를 해결하라고 촉구하기 위해 정당을 만들기도 한다.**
+
+좌파적인 정책과 담론은 보통 두 가지 방향에서 나타난다. 권리가 지켜지지 않는 문제에 대응하기 위해 사회변화를 주장하거나, 아니면, 사회변화의 문제점에 대응하기 위해 새로운 종류의 권리를 주장하거나. 두 경우를 칼같이 구분하기는 어렵지만, 경우에 따라 주장의 방향이 미묘하게 달라진다. 직업이 불안정해서 소득이 일정치 않은 프리랜서 노동자가 늘어난다는 문제를 예로 들어보자. 안정적으로 일할 권리를 지키도록 프리랜서를 대상으로 하는 제도의 변화(노동계약 표준화, 사회보험 적용 등)를 촉구할 수도 있다. 반면에 이런 주장도 가능하다. 사회변화로 일자리가 불안정하더라도 일정한 소득을 유지할 권리를 주장하며, 국가가 세금을 더 거두어 모든 국민에게 정기적으로 일정한 소득을 제공하도록 촉구할 수도 있다.
+
+전자의 방향이 90년대 사민주의 정당의 탄생 배경이라면, 후자의 방향은 2010년대에 탄생한 신진 진보정당들의 배경이 되었다. 기후변화 위기, 노동형태의 변화, `정상가족(남성-여성 부부와 그들의 자식이 함께 거주하는 형태의 가족)`과는 다른 인간관계와 생활공동체의의 등장, 인간과 공존하는 동물의 등장 등등, 일상에 큰 영향을 주는 사회변화가 많다. 입법과 행정이 사회의 변화상을 따라오지 못해서 사회문제가 발생할 때, 유권자는 정당을 만들기도 한다. 새롭게 등장하는 사회문제를 지적하는 그 자체도 정치에서 매우 중요한 일이기 때문이다. 
+
+이러한 신진 원외 진보정당의 등장을 촉진한 것에는 여러가지 요인이 있다. 민주화 이후 시민사회운동이 활발해지면서 기존 정당들이 포괄하지 못한 다양한 담론이 축적되었고, 일반 유권자가 제도권 정치에 직접 참여하자는 움직임이 결합하여 신규 정당의 창당으로 이어졌다. 여기에, 국회의원 선거에서 전국 득표율 2% 미만을 기록한 정당은 자동으로 해산되로록 하는 <정당법> 제44조1항이 2014년 헌법재판소의 위헌결정(사건번호 2012헌마431)에 따라 폐지되면서, 새로운 담론을 가졌으나 충분한 지지를 받지 못하던 정당들이 해산 걱정 없이 지속적으로 활동할 수 있는 여건이 마련되었다. 
+
+이러한 정당이 등장하는 것을 두 가지 관점으로 평가할 수 있다. 하나, 진보/좌파 정치세력이 한국 사회의 주류로 자리잡고 그 입지가 안정화되면서 다양한 진보/좌파 담론이 생겨나고 정치권에서 서로 경쟁하는 현상이라고 해석할 수 있다. 둘, 진보/좌파 정치세력이 다양한 담론을 포괄하지 못해서 분열됨에 따라, 중앙정치권에서 보수/우파 정치세력과 경쟁하기 불리한 정세로 바뀌고 있다고 해석할 수도 있다. 이 두 가지 관점에 따라, 많은 유권자들이 신진 진보정당에 대한 평가를 놓고 선거때마다 충돌하곤 한다. 
+
+
 ### 녹색당
+한국에서 “녹색 ”이라는 단어가 들어간 정당명은 여러 번 등장했지만, 그 중에서 전국적인 조직을 가지고 꾸준히 공직선거에 출마하고 있는 정당은 2012년에 창당한 녹색당이다. 2012년 창당 당시 과천시의회 의장 서형원이 입당하여 지방의회에 진출한 적이 있으나, 아직 녹색당의 후보가 공직선거에 당선된 적은 없다. 다만 2014년 지방선거에서는 서형원이 과천시장 후보로 출마하여 3위(득표율 19.25%), 2018년 지방선거에서는 서울시장(신지예)과 제주도지사(고은영) 후보가 각각 4위(1.67%), 3위(3.53%)를 기록하며 존재감을 드러낸 바 있다.
+
+녹색당의 활동을 단순히 녹색(환경, 생태)이라는 키워드만으로 압축하기는 어렵다. 기후변화 위기 대응, 탈원전, 건설개발사업 축소 등의 이슈는 녹색 이슈이면서 경제, 산업, 에너지 구조를 포괄적으로 다루는 문제이기도 하다. 또한 녹색당이 여성주의와 성소수자 문제, (반려)동물의 생활 관련 문제를 다루는 행보는, 같은 주제에 대해 상대적으로 소극적이었던 사민주의 정당들도 이를 중요하게 다루게끔 하는 영향을 주었다. 
+
+
 ### 기본소득당
+기본소득당은 2020년에 창당했으나, 정당으로서의 실질적인 활동은 2019년에 시작했다. 사민주의 정당 중 하나인 노동당(p.XXX 참고)이 2019년에 선출한 당 지도부는 노동당을 기본소득 담론 중심의 정당으로 재편하려고 했고, 그 일환으로 당명을 “기본소득당 ”으로 교체하고자 했다. 그러나 이 안건이 부결되자, 지도부가 총사퇴한 이후 노동당을 탈당하고 창당한 당이 지금의 기본소득당이다. 
+
+당명 그대로, 기본소득당은 `기본소득(재산, 소득, 노동 여부나 노동 의사와 관계없이, 모든 사회 구성원 개인에게 최소한의 생활비가 될 수 있는 금액을 현금으로 정기적으로 지급하는 정책)`의 도입이라는 한 가지 이슈를 중심으로 활동하는 정당이다. 기본소득 자체는 2000년대부터 세계 각국의 학계와 시민단체에서 논의가 시작되었고, 한국에서도 중앙정부와 일부 지방정부가 청년수당, 아동수당 등의 방식으로 기본소득의 요소를 일부 도입한 제도를 시행하고 있다. 그러나 기본소득의 전면적인 도입은, 시민의 권리, 노동의 정의, 조세 및 복지제도 개편 등 상당히 복합적인 논의를 거쳐야 실현될 수 있다. 기본소득당의 활동은 이 논의를 시민사회나 행정의 영역에서 정치의 영역으로 끌어올리는 계기가 될 수도 있다. 
+
+
 ### 미래당
+ ”한번도 안주하며 살지 않는 청년의 마음으로 변화를 주도(미래당 강령 중 일부) ”하는 것을 추구하는 미래당의 탄생배경은 다소 복잡하다. 2011년, 아직 (정치인이 아니던) 안철수와 윤여준이 진행한 “청춘콘서트 ”의 기획진행에 참여했거나 청강했던 사람들이 모여서 창당한 “청년당 ”이 그 시작이었다. 2012년 총선에 참가하고 득표율 미달로 해산된 뒤, 청년당 참가멤버 중 일부는 안철수의 신당을 따라 민주당계 정당(새정치민주연합)으로 합류하고, 그 외 멤버들이 2017년에 “우리미래 ”의 이름으로 재창당한다.
+
+창당 배경에서 유추 가능하듯, 미래당이 주장하는 담론의 상당수는 “청년, 미래세대 ”의 정치참여 및 생활과 관련된 것이 많다. 부동산 정책을 주택가격 및 매매의 측면이 아니라 (청년)임대주택 및 임대차거래 측면에서 접근하거나, 국공립 대학교의 무상교육을 강령의 주요 정책으로 제시하는 부분에서 이러한 특징이 드러난다. 
 
 
+### 눈여겨볼 선거
 
+#### 경기 과천시 (비례)
 
+#### 서울 은평구 을 (인포그래픽은 은평구 갑으로.)
 
 
