--- a/03_위원회와 주요 이슈(1).md
+++ b/03_위원회와 주요 이슈(1).md
@@ -85,13 +85,13 @@
 
 ### 국정의 주요 이슈 & 눈여겨볼 선거
 
-#### "일 잘하는 직장" 만들기
+#### “일 잘하는 직장 ” 만들기
 
 
-#### "입사지원 자격 넓히기"
+#### “입사지원 자격 넓히기 ”
 
 
-#### "업무체계·회의체계" 만들기
+#### “업무체계·회의체계 ” 만들기
 
 
 - - -
@@ -114,7 +114,7 @@
 #### 서울 동작구 을, 경기 안양시 동안구 을
 **미래통합당 나경원, 심재철**
 
-나경원(2018~ 2019)과 심재철(2019~ )이 1년 임기의 자유한국당(현 미래통합당) 원내대표를 맡는 동안, 자유한국당은 급격한 변화를 보였다. 나머지 원내 4당이 입법연대를 짜고 선거제도 개편, `공수처 설치(p. XXX 참고)`, `유치원 3법(4권 ‘위원회와 주요 이슈 (2)’, p.XXX 참고)` 등을 빠르게 논의하는 패스트트랙 정국에서, 나경원과 심재철은 모든 입법협상과 국회 의사일정 합의를 거부하여, 시간을 끌며 입법연대를 내부에서 분열시키려는 방식으로 대응한 것이다. 그 과정에서 자유한국당은 ‘국회선진화법’이 도입된 2012년 이후 처음으로, 회의진행 방해를 위한 `국회의원 감금(2019년 4월, 자유한국당 의원 11명이 바른미래당 채이배 의원의 사개특위 회의 참가를 저지하기 위해, 채이배 의원실의 문을 몸으로 봉쇄한 사건.)`, 본회의장 단상 점거(2019년 12월) 등을 당 차원에서 진행했다. 
+나경원(2018~ 2019)과 심재철(2019~ )이 1년 임기의 자유한국당(현 미래통합당) 원내대표를 맡는 동안, 자유한국당은 급격한 변화를 보였다. 나머지 원내 4당이 입법연대를 짜고 선거제도 개편, `공수처 설치(p.XXX 참고)`, `유치원 3법(4권 ‘위원회와 주요 이슈 (2)’, p.XXX 참고)` 등을 빠르게 논의하는 패스트트랙 정국에서, 나경원과 심재철은 모든 입법협상과 국회 의사일정 합의를 거부하여, 시간을 끌며 입법연대를 내부에서 분열시키려는 방식으로 대응한 것이다. 그 과정에서 자유한국당은 ‘국회선진화법’이 도입된 2012년 이후 처음으로, 회의진행 방해를 위한 `국회의원 감금(2019년 4월, 자유한국당 의원 11명이 바른미래당 채이배 의원의 사개특위 회의 참가를 저지하기 위해, 채이배 의원실의 문을 몸으로 봉쇄한 사건.)`, 본회의장 단상 점거(2019년 12월) 등을 당 차원에서 진행했다. 
 
 이는 두 가지 측면에서 보수주류 정당의 오랜 기조를 정면으로 뒤집는 일이었다. 120석 내외의 대형 정당이 협상의 주도권을 가져가는 것을 포기했다는 점, 대신 민주적 의사결정의 판을 무력화시켜 극우적 지지층을 완전히 포섭해냈다는 점. 이 내용에 대한 평가는 2020년 총선의 주요 전선 중 하나이다.
 
@@ -142,13 +142,13 @@
 
 판결의 공정
 
-#### "일 잘하는 직장" 만들기 (2)
+#### “일 잘하는 직장 ” 만들기 (2)
 
 
 #### 고위공직자범죄수사처
 
 
-#### "검찰이 왜 (꽃) 거기서 나와?"
+#### “검찰이 왜 (꽃) 거기서 나와? ”
 
 
 #### 두 명의 50대 남성 공직자
@@ -261,7 +261,7 @@
 
 어떤 정당이 행정부에서 힘이 가장 센 국무총리나 기획재정부 장관을 국회에서 다룰 때에는, 그에 걸맞는 중량감있는 인물을 내세워야 한다. 특히 그 정당이 의석수가 적어서 대외적으로 ‘만만하게 보일’ 위험이 크다면, 중량감을 갖춘 의원이 전문성을 갖춘 보좌진의 도움을 받아서 강력한 화력을 발휘해야 한다. 
 
-2016-2020 국회에서, 정의당에서는 당대표 심상정이 그 역할을 맡았다. 상반기에 정무위, 하반기에 기재위에 소속되었던 심상정은 행정부의 경직성이 초래할 수 있는 구조적인 문제를 자주 건드렸다. 대표적으로, 기획재정부가 행정부 각 부처 및 공공기관마다 임금 총액 한도를 설정하는 '총액인건비제'가 공공부문 비정규직의 정규직 전환 과정에서 인력감축과 해고를 일으킨다는 구조적인 문제를 국정감사에서 제기한 바 있다. 
+2016-2020 국회에서, 정의당에서는 당대표 심상정이 그 역할을 맡았다. 상반기에 정무위, 하반기에 기재위에 소속되었던 심상정은 행정부의 경직성이 초래할 수 있는 구조적인 문제를 자주 건드렸다. 대표적으로, 기획재정부가 행정부 각 부처 및 공공기관마다 임금 총액 한도를 설정하는 ‘총액인건비제’가 공공부문 비정규직의 정규직 전환 과정에서 인력감축과 해고를 일으킨다는 구조적인 문제를 국정감사에서 제기한 바 있다. 
 
 #### 대구 수성구 을
 **더불어민주당 김부겸**
@@ -271,6 +271,6 @@
 <!--
 #### 경남 사천시-남해군-하동군
 **더불어민주당 제윤경(비례대표, 불출마)**
-일반적으로 '금융 전문가'라고 하면 은행장 정도 되는 은행인이나 금융 담당 공무원, 재무/경제 관련 학자 등이 먼저 떠오른다. 그러나 그런 인물은 행정부나 의회에 워낙 많이 들어가다보니, 오히려 `미시경제(개인, 소규모 기업, 가정 단위에서 일어나는 경제문제. 이와 반대로 국가 또는 전세계 단위의 경제문제는 '거시경제'라고 부른다.)` 측면에서 금융정책을 제안하고 추진하는 것이 필요성에 비해 많이 무시된다. 그 지점에서 제윤경은 인상적인 입법활동을 했다. 국회의원이 되기 전, 그는 사업가이자 시민활동가로서 개인경제교육, 부채상담, 수입이 없어서 장기연체된 개인 부실채권을 헐값에 사들여 소각하는 활동 등을 했다. 
+일반적으로 ‘금융 전문가’라고 하면 은행장 정도 되는 은행인이나 금융 담당 공무원, 재무/경제 관련 학자 등이 먼저 떠오른다. 그러나 그런 인물은 행정부나 의회에 워낙 많이 들어가다보니, 오히려 `미시경제(개인, 소규모 기업, 가정 단위에서 일어나는 경제문제. 이와 반대로 국가 또는 전세계 단위의 경제문제는 ‘거시경제’라고 부른다.)` 측면에서 금융정책을 제안하고 추진하는 것이 필요성에 비해 많이 무시된다. 그 지점에서 제윤경은 인상적인 입법활동을 했다. 국회의원이 되기 전, 그는 사업가이자 시민활동가로서 개인경제교육, 부채상담, 수입이 없어서 장기연체된 개인 부실채권을 헐값에 사들여 소각하는 활동 등을 했다. 
 -->
 
