--- a/04_위원회와 주요 이슈(2).md
+++ b/04_위원회와 주요 이슈(2).md
@@ -28,7 +28,7 @@
 
 ### 국정의 주요 이슈 & 눈여겨볼 선거
 
-#### "성적 지향"과 "동성애" 사이
+#### “성적 지향 ”과 “동성애 ” 사이
 
 #### 일터에서 살아남을 것. 
 
@@ -65,7 +65,7 @@
 
 사민주의 정당은 노동문제를 노동자의 입장에서 대변하는 정당이고, 그런 정당 소속의 환노위 국회의원은 억울한 노동사건들이 국회에서 논의되도록 하는 중요한 창구 역할을 하게 된다. 2016-2020 국회에서는 이정미가 그런 역할을 맡았다. 파리바게트 비정규직 노동자에 대한 노동법 상습위반, 한국도로공사 톨게이트 노동자의 해고위협 문제, 직장 내 괴롭힘과 비정규직 노동자의 산업안전 사안(일명 ‘김용균법’)을 다루는 <산업안전보건법> 개정안 제안 등, 이정미를 통해 다뤄진 사안들은 한국 사회 전반의 노동문제를 매우 깊숙히 파고드는 문제였다.
 
-#### 인천 파주 갑, 충북 청주시 청원구
+#### 경기 파주 갑, 충북 청주시 청원구
 **미래통합당 신보라(비례대표), 국민의당-미래통합당 김수민(비례대표)**
 
 국회의 구성이 점점 늙어가고 (일생에서 가장 곤란한 시기를 겪는) 젊은 여성을 대변하기 어려운 구성이 되어가는 현실 속에서, 2016-2020 국회에서 이를 그나마 잘 대변할 수 있는 의원 2명이 모두 보수정당에서 등장했다. 신보라와 김수민은 `2016년 총선에서 당선된 현역의원(나머지 한 명의 현역 30대 국회의원인 정은혜(더불어민주당)의 경우, 2016년에 비례대표로 출마해서 낙선했으나, 사퇴한 비례대표 의원의 직을 2019년에 승계한 사례이다.)` 중에서 현재 유이한 30대 국회의원으로, 각 당(새누리당, 미래통합당)에서 최고위원과 충북도당위원장 등의 주요 당직을 맡아 주목받았다. 
@@ -119,7 +119,7 @@
 
 #### 강소국 되기
 
-#### "제복입은 시민"
+#### “제복입은 시민 ”
 
 #### 자치경찰, 수사경찰
 
@@ -139,7 +139,7 @@
 #### 서울 강동구 갑
 **더불어민주당 진선미**
 
-앞서서 본 남인순과 정춘숙의 경우(p. XXX 참고)와 달리, 진선미는 여성문제 관련 소송을 많이 맡는 변호사로서 여성운동에 참여했다. 마침 성범죄와 관련하여 하수상한 시절에, 진선미는 행안위 소속으로 성범죄와 관련된 경찰의 대응을 비판하고, 동성커플이나 결혼하지 않은 노년커플의 생활을 보호하는 정책을 추진하는 데에 앞장섰다. 소라넷의 폐쇄 문제, 불법촬영 및 초소형카메라 문제, `생활동반자법(동거를 하고 경제권을 공유하는 2명의 사람이 신청하면 나이/성별 등에 관계 없이 생활동반자로 지정해서, 주택 구입이나 병원 입원 등 법적 보호자가 필요한 상황에서 혼인관계와 유사하게 인정하는 법률안. 2020년 현재 아직 입법되지 않았다.)` 입법 추진 등이 그 결과물이었다. 진선미는 여성가족부 장관(2018~ 2019)으로 임명된 것도 그 맥락에서 이해할 수 있다. 
+앞서서 본 남인순과 정춘숙의 경우(p.XXX 참고)와 달리, 진선미는 여성문제 관련 소송을 많이 맡는 변호사로서 여성운동에 참여했다. 마침 성범죄와 관련하여 하수상한 시절에, 진선미는 행안위 소속으로 성범죄와 관련된 경찰의 대응을 비판하고, 동성커플이나 결혼하지 않은 노년커플의 생활을 보호하는 정책을 추진하는 데에 앞장섰다. 소라넷의 폐쇄 문제, 불법촬영 및 초소형카메라 문제, `생활동반자법(동거를 하고 경제권을 공유하는 2명의 사람이 신청하면 나이/성별 등에 관계 없이 생활동반자로 지정해서, 주택 구입이나 병원 입원 등 법적 보호자가 필요한 상황에서 혼인관계와 유사하게 인정하는 법률안. 2020년 현재 아직 입법되지 않았다.)` 입법 추진 등이 그 결과물이었다. 진선미는 여성가족부 장관(2018~ 2019)으로 임명된 것도 그 맥락에서 이해할 수 있다. 
 
 특이하게, 그가 소속한 선거구에는 지역에 강력한 영향력을 발휘하고 있는 보수적 대형 종교 커뮤니티(명성교회: 강동구 명일1동)가 자리잡고 있다. 진선미의 그간의 행보가 명성교회 커뮤니티 내부의 반발을 일으킨다면, 2020년 총선에서 어떤 결과로 이어질지 주목할 만 하다. 
 
@@ -237,30 +237,35 @@
 
 
 ## 산업, 통상, 환경, 에너지, 인프라 관련
-**인간의 풍요로운 삶을 지탱하는 요소들은 대게 일상에서 눈에 띄지 않는 곳에 존재한다. 
+**인간의 풍요로운 삶을 지탱하는 요소들은 대게 일상에서 눈에 띄지 않는 곳에 존재한다. 국회는 그런 곳까지 몸소 들어가서 행정부의 업무를 살펴봐야 한다.**
 
 ### 과학기술정보방송통신위원회(과기정통위) #2
-과기정통위가 담당하는 중요 국가기반시설 중에서는, 우체국(우정사업본부)와 방송망, 정보통신망 시설이 있다. 우체국이 편지와 소포 등 실물로 된 정보를 주고받는 데에 가장 안정적이고 모두가 이용할 수 있는 시설(코로나19 확산기의 도시 및 농촌지역 마스크 공급을 통해 그 효과를 입증한 바 있다)이라면, 정보통신망은 모두가 
+과기정통위가 담당하는 중요 국가 인프라 중에서는, 우체국(우정사업본부)과 전화·정보통신망 시설이 있다. 우체국은 편지와 소포 등 실물을 주고받을 수 있는 가장 안정적이고 접근성 높은 시설이고, 전화·정보통신망은 정보화시대 이후 상거래, 문화생활, 사회적 교류 등 모든 일상생활 유지에 필수인 시설이다. 우체국은 코로나19 확산기의 도시 및 농촌지역 마스크 공급을 도맡으며 그 효과를 스스로 입증했고, KT 서울 아현지사의 화재로 마포구 일대의 신용카드를 이용한 모든 상업거래가 막혀버린 사건은 정보통신망의 국가적 관리 필요성을 다시 한 번 상기시켰다.
+
+앞서 살펴본 문체위가 문화를 다루는 관점(p.XXX 참고)과 유사하게, 우정사업과 전화·정보통신망 사업에서도 산업이자 수익사업의 측면, 그리고 공공서비스의 측면, 이 두 가지 중 어떤 측면에 더 집중하느냐에 따라 의정활동에 대한 평가가 완전히 갈릴 수 있다. 이 두 사업은 모든 시민이 필수적으로 이용해야 하는 서비스이므로, 국가가 전국적으로 광범위한 인프라(운송차량, 화물취급장, 광케이블, 통신위성, 기지국 등)를 확충해서 값싼 요금과 높은 접근성을 유지해야 한다. 반대로 이를 사기업이 운영하는 산업이라고 생각한다면, 사업자가 충분한 경제효과를 일으키도록 높은 수익과 ‘경영 합리화’를 보장해야 한다. 특히 산업으로서 “국제적인 경쟁력 ”을 갖추어 해외 시장까지 진출할 수 있도록 장려하는 방향까지 생각할 수도 있다.
 
 ### 농림축산식품해양수산위원회(농축수위)
-사람들이 자주 잊곤 하지만, 농축수위가 담당하는 농림, 축산, 수산업도 인류문명을 떠받치는 아주 거대하고 중요한 ‘산업’이다. 도시에 사람이 살기 위해서는 도시 저 멀리에서 안전한 농수축산물이 안정적으로 공급되어야 하고, 도시 바깥의 마을은 농수축산업 없이는 경제활동이 불가능해서 사람이 살 수 없다. 한국의 행정력이 닿는 실질적인 영토를 "한반도 및 그 부속도서 내의 점처럼 남아있는 몇몇 큰 도시들"로 축소하고 싶지 않다면, 농수축산업을 "사양산업"이나 "경쟁력이 없는 산업"이라고 간단하게 퉁치고 넘어갈 수는 없다. 생산자를 보호하고 산업을 육성하며, 그 생산품이 가급적 안전하게, 그리고 가능하면 동물의 일생을 너무 가혹하게 쥐어짜지 않으며 생산하고 유통할 수 있도록 관리해야 한다. 
+사람들이 자주 잊곤 하지만, 농축수위가 담당하는 농림, 축산, 수산업도 인류문명을 떠받치는 아주 거대하고 중요한 ‘산업’이다. 도시에 사람이 살기 위해서는 도시 저 멀리에서 안전한 농수축산물이 안정적으로 공급되어야 하고, 도시 바깥의 마을은 농수축산업 없이는 경제활동이 불가능해서 사람이 살 수 없다. 한국의 행정력이 닿는 실질적인 영토를 “한반도 및 그 부속도서 내의 점처럼 남아있는 몇몇 큰 도시들 ”로 축소하고 싶지 않다면, 농수축산업을 “사양산업 ”이나 “경쟁력이 없는 산업 ”이라고 간단하게 퉁치고 넘어갈 수는 없다. 생산자를 보호하고 산업을 육성하며, 그 생산품이 가급적 안전하게, 그리고 가능하면 동물의 일생을 너무 가혹하게 쥐어짜지 않으며 생산하고 유통할 수 있도록 관리해야 한다. 
 
 농수축위가 담당하지만 대도시 사람들의 눈에 잘 띄지 않는 다른 분야는, 해양수산부가 담당하는 해운, 항만, 해양안전, 해상치안과 오염방제, 해양과학 및 기술 연구다. 한국은 휴전선의 봉쇄로 인해 실질적인 섬나라이고, 동시에 실제로 사람이 사는 섬이 어마어마하게 많다. 수출입 물자수송과 사람의 이동을 비롯해서, 행정부의 해양 관리에 따라 일상생활에 직접적인 영향을 받는 인구가 상당히 많다. 
 
 
 ### 산업통상자원중소벤처기업위원회(산통자위)
-이 긴 이름의 위원회가 소관하는 중앙정부 부처는 산업통상자원부와 중소벤쳐기업부이다. 산업통상자원부는 사업규제, 기술특허 등 상업·서비스업·공업·광업 전반의 육성에 관한 정책, 에너지·자원 관련정책, 무역·통상 관련정책을 총괄한다. 다만 그 중에서도 중소기업 육성, 지원, 벤처기업 창업과 관련된 부분은 중소벤처기업부가 맡고 있다. 
-산업구조가 변화하고 (기후변화가 겹쳐서) 에너지 생산구조가 변화해야 하는 
+이 긴 이름의 위원회가 소관하는 중앙정부 부처는 산업통상자원부와 중소벤쳐기업부이다. 산업통상자원부는 사업규제, 기술특허, 지식재산권 등 상업·서비스업·공업·광업 전반의 육성에 관한 정책, 에너지·자원 관련정책, 무역·통상 관련정책을 총괄한다. 다만 그 중에서도 중소기업 육성, 지원, 벤처기업 창업과 관련된 부분은 중소벤처기업부가 맡고 있다. 
+
+산통자위가 맡아야 하는 ‘산업’과 ‘자원’과 ‘기업’의 범위는 정말 넓다. 이와 관련하여 의원들이 방문하거나 의견을 청취해야 할 장소들을 나열하면서 의원들의 고충을 상상해보자. 제철소와 조선소, 그래픽디자인 에이전시, 반도체 공장, 지역별 전통시장, 인공지능차량 연구소, 석탄화력발전소, 판교의 3D 프린팅과 VR 제작회사, 풍력발전소, 동대문 기반의 온라인 쇼핑몰, 원자력발전소, 안성의 탕면 공장, 태백시의 탄광, 여수시의 석유화학단지, 을지로의 인쇄공장과 주물공장 등등.
 
 
 ### 국토교통위원회(국토위)
-국토교통위원회는 국토교통부 소관 업무를 다룬다. 주택, 신도시 등 국토의 이용관리와 건설관련 규제, 그리고 도로, 철도, 공항 등 육상/항공 교통시설 관리업무가 여기에 들어간다. 이재에 밝은 사람들은 곧바로 두 가지 키워드를 찾아낼 것이다. 부동산, 그리고 
+국토교통위원회는 국토교통부 소관 업무를 다룬다. 주택건설, 신도시, 하천, 간척사업 등 국토의 이용관리와 건설관련 규제, 그리고 도로, 자동차, 철도, (택배 등) 물류체계, 공항 등 육상/항공 교통시설 관리업무가 여기에 들어간다. 어느 지역에 공업단지가 들어서느냐, 철도가 언제까지 새로 깔리느냐, 임대주택을 몇 호나 짓느냐, 등등의 정책에 따라 국가 전체의 인구정책과 산업정책이 좌지우지된다. 개인의 입장에서도, 열악하고 비싼 주거환경에서 생활하는 유권자들, 또는 외부 이동이 거의 불가능할 정도로 교통의 혜택을 거의 받지 못하는 지역의 유권자들에게 중요한 부서이다. 물론 언론에서 주로 집중하는 부분은, 부동산 자산가치와 직접 연관된 경우가 대부분이지만.
 
-많은 지역구 국회의원들이 국토위에 배정되기를 선호한다. 지역구 내 개발사업, 특히 교통시설을 유치하는 데에 유리하기 때문이다. 
+많은 지역구 국회의원들이 국토위에 배정되기를 선호한다. 지역구 내 개발사업, 특히 신도시 개발이나 교통시설을 유치해서 지역구 내 지지를 끌어모으기 좋기 때문이다. 물론, 개발사업에서 파생되는 수혜가 클수록 다른 지역과의 유치경쟁도 치열해진다. 이 때는 당적과 무관하게 국회의원과 지방정부, 지방의회가 모두 협력하는 경우를 종종 볼 수 있다.
 
 
 ### 환경노동위원회(환노위) #3
-산업과 
+환경부는 산업, 통상, 에너지, 인프라 건설 관련 행정부 업무에서 언제나 동네북 신세를 면치 못한다. 행정부가 환경관련 규제나 건설사업의 환경영향평가를 실시할 때 마다, 다른 행정부 부서의 사업을 가로막거나 지연시키는 것 처럼 보이기 때문이다. 특히 빠른 공장 건설과 개발사업 추진을 원하는 시민들의 원성을 듣곤 한다. 
+
+그러나 이제 환경부를 마냥 무시할 수는 없는 시대가 되었으니. 첫째는 중앙정치권의 일상적인 이슈가 된 미세먼지 문제, 둘째는 아직 중앙정치권이 전혀 관심을 주지 않는 전지구적 기후변화 위기와 온실가스 감축 문제 때문이다. 환경 관련 부처가 행정부 내에서 여전히 별 목소리를 내지 못하는 상황이라면, 국회 환노위가 법안발의와 대정부 질의와 국정감사를 통해 최대한 목소리를 내주어야 한다.
 
 
 - - -
@@ -271,11 +276,11 @@
 
 #### 에너지 생산, 관리, 소비
 
-#### "농민 프랜차이즈"와 농민 기본소득
+#### “농민 프랜차이즈 ”와 농민 기본소득
 
 #### 타다, 인터넷 은행
 
-#### "개인정보 3법"
+#### “개인정보 3법 ”
 
 #### 인터넷망은 모두에게 평등한가?
 
@@ -288,7 +293,7 @@
 
 #### 부산 서구-동구?
 **미래통합당 송희경(비례대표)**
-여성 이공계열 종사자를 비례대표 1번으로 공천하는 풍습(p. XXX 참고)은 보수주류 정당도 예외가 아니었다. 2016년 새누리당 비례 1번으로 당선된 송희경은 KT 전무이사를 지낸 컴퓨터공학 및 경영학 전공자이다. 이력에서 볼 수 있듯 그는 연구직보다는 산업계 종사자라고 볼 수 있다. 이런 속성을 가진 의원의 입법활동은 자세히 관찰해야 한다. 산업의 구조와 발전상황을 잘 파악하고 있는 인물이기에 산업의 발전을 위해 당장 필요한 양질의 입법활동을 기대할 수 있지만, 한편으로는 이미 자리잡은 기존 기업의 이해관계에 맞춘 입법활동을 하여, “이익보는 일은 기업이 사유화하고 손해볼 일은 사회에 떠념겨서” 산업의 발전을 가로막을 수도 있기 때문이다. 
+여성 이공계열 종사자를 비례대표 1번으로 공천하는 풍습(p.XXX 참고)은 보수주류 정당도 예외가 아니었다. 2016년 새누리당 비례 1번으로 당선된 송희경은 KT 전무이사를 지낸 컴퓨터공학 및 경영학 전공자이다. 이력에서 볼 수 있듯 그는 연구직보다는 산업계 종사자라고 볼 수 있다. 이런 속성을 가진 의원의 입법활동은 자세히 관찰해야 한다. 산업의 구조와 발전상황을 잘 파악하고 있는 인물이기에 산업의 발전을 위해 당장 필요한 양질의 입법활동을 기대할 수 있지만, 한편으로는 이미 자리잡은 기존 기업의 이해관계에 맞춘 입법활동을 하여, “이익보는 일은 기업이 사유화하고 손해볼 일은 사회에 떠념겨서” 산업의 발전을 가로막을 수도 있기 때문이다. 
 
 아무튼 IT계열 창업이 주목받고 촉진되어야 한다는 여론이 큰 상황에서, 그는 보수주류 정당이 이를 가장 잘 대변할 수 있다고 앞세워진 인물이다. 실제로, 그는 과방위에서 4년 동안 있었을 뿐만 아니라, 보수주류 정당 내에서 경제산업 문제에 관여하는 조직에 왠만하면 참여하는 당내 주요 인사가 되었다.
 
