--- a/05_중부지방 권역.md
+++ b/05_중부지방 권역.md
@@ -39,7 +39,7 @@
 
 우리가 흔히 동네의 소득수준이나 개발구성을 고려하여 떠올릴 수 있는 지역구별 선거구도가 있다. 그러나 강서/영등포권에서는 2010년대 들어서 이를 거스르는 사례가 다수 등장한다. 젊은 학생과 노동자, 전라권 출신 이주민 비율이 높아서 전통적인 민주당계 정당 강세지역이었던 관악구 갑/을과 금천구에서는, 2016년 총선 기준으로 보수주류 정당과 중도 제3세력 정당이 급격하게 성장하여 합산 득표율이 60%를 차지할 정도가 되었다. 반대로 부촌인 목동과 여의도의 존재로 인해 전통적인 보수주류 정당 강세지역이었던 양천구 갑과 영등포구 을에서는, 2012년부터 보수주류 정당과 민주당계 정당이 득표율에서 거의 1:1의 승부를 벌이면서 16년에 더불어민주당이 모두 승리하는 결과가 나왔다. 
 
-강서/영등포에서 기존 구도가 흔들리는 것은 2016년에 특히 두드러졌으며, 이를 주도한 것은 민주당계 소수정당이었다. 당시 국민의당과 `’민주당’(더불어민주당과는 별개의 정당이다. 민주당계 정당 소속으로 과거 영등포구 을 재선 국회의원(1996~ 2002)과 서울시장 후보(2002)를 역임한 김민석을 중심으로 2014년에 창당한 정당이다. 2016년 총선을 앞두고 더불어민주당에서 공천탈락한 강서구 갑 4선 국회의원 신기남(1996~ 2008, 12~ 16)이 입당하여 잠시 원내정당이 되었고, 2016년 더불어민주당과 합당하였다.)`의 득표율을 합했을 때, 강서/영등포의 14개 지역구 중 7곳에서 득표율이 20%를 넘었다. 서울 나머지 35개 지역구에서는 6곳이었던 것과 비교해서 매우 두드러진 차이이다. 
+강서/영등포에서 기존 구도가 흔들리는 것은 2016년에 특히 두드러졌으며, 이를 주도한 것은 민주당계 소수정당이었다. 당시 국민의당과 `‘민주당’(더불어민주당과는 별개의 정당이다. 민주당계 정당 소속으로 과거 영등포구 을 재선 국회의원(1996~ 2002)과 서울시장 후보(2002)를 역임한 김민석을 중심으로 2014년에 창당한 정당이다. 2016년 총선을 앞두고 더불어민주당에서 공천탈락한 강서구 갑 4선 국회의원 신기남(1996~ 2008, 12~ 16)이 입당하여 잠시 원내정당이 되었고, 2016년 더불어민주당과 합당하였다.)`의 득표율을 합했을 때, 강서/영등포의 14개 지역구 중 7곳에서 득표율이 20%를 넘었다. 서울 나머지 35개 지역구에서는 6곳이었던 것과 비교해서 매우 두드러진 차이이다. 
 
 
 ### 서울 강남4구
@@ -74,22 +74,15 @@
 #### 서울 은평구, 마포구 (비례)
 **사민주의 정당의 천하3.5분지계**
 
-서울에서 2016년 총선의 비례대표 정당투표는 국민의당(민주당계 전라권 제3정당)의 등장으로, 새누리당(보수주류 정당), 더불어민주당(민주당계 정당), 국민의당이 모두 각 구별로 25~30% 내외의 고른 득표율을 얻는 천하삼분지계가 실현되었다. 그 중에서도 가장 균형잡힌(?) 솥발의 형세를 취한 곳은 은평구와 마포구다. 서울에서 정당투표 1~3위 사이의 차이가 가장 적은 두 곳으로, 1.5%p를 넘지 않았다. 
+서울에서 2016년 총선의 비례대표 정당투표는 국민의당(민주당계 전라권 제3정당)의 등장으로, 새누리당(보수주류 정당), 더불어민주당(민주당계 정당), 국민의당이 모두 각 구별로 25~ 30% 내외의 고른 득표율을 얻는 천하삼분지계가 실현되었다. 그 중에서도 가장 균형잡힌(?) 솥발의 형세를 취한 곳은 은평구와 마포구다. 서울에서 정당투표 1~ 3위 사이의 차이가 가장 적은 두 곳으로, 1.5%p를 넘지 않았다. 
 이와 함께 살펴봐야 할 중요한 제4의 솥발은 사민주의 정당이다. 은평과 마포는 2016년 총선에서 사민주의 정당이 가장 큰 성과를 거둔 서울의 자치구다. 정의당은 가장 높은 비례대표 정당득표율을 기록했고, 노동당도 서울 평균 득표율의 2배를 기록했다. 서울에서 진보정당 지역구 후보가 가장 높은 득표율을 기록한 곳도 은평구 갑(노동당 최승현: 4.18%)과 마포구 을(정의당 배준호: 3.96%)이었다. 선거구도를 유달리 예측하기 어려운 2020년 총선에서, 사민주의 정당은 예상 외의 성과를 낼 수도 있다. 
 
-
-<!--
-#### 서울 강서구 을, 구로구 을
-**미래한국당 서울시당 최후의 보루**
-2010년대에 서울의 보수주류 정당 중진들이 우수수 낙선한 탓에, 3선의 김용태(양천구 을)와 김성태(강서구 을)는 나경원(동작구 을, p.000 참조)과 함께 서울지역 중진 의원으로 입지가 격상되었다. 김용태와 김성태는 2008년부터 같은 지역구에서 3선을 했고, 2017년에 보수개혁 정당(바른정당) 창당에 주도적으로 참여했다가 자유한국당으로 복당했다. 이 때의 당적변경으로 많은 유권자에게 비난받았으나, 정작 자유한국당 안에서는 ‘박근혜 복권파’를 비롯한 당의 극우파를 견제할 몇 안되는 인물이라고 기대받았다. 실제로 두 의원은 2018년에 각각 자유한국당 사무총장과 원내대표를 맡았고, 당의 2018년 지방선거 패배를 수습하는 데에 나름의 역할을 했다고 평가받는다. 
-2020년 총선을 앞두고 김성태는 불출마를 선언했고, 김용태는 민주당계 정당(박영선)이 3연승한 구로구 을 지역구로 자리를 옮긴다. 만약 김용태와 김성태의 전현직 지역구에서‘조차도’ 미래통합당이 패배한다면, 이 결과는 미래통합당이 서울에서의 대중성을 완전히 잃어버렸고 이를 회복할 인물마저 없어졌다는 증거처럼 여겨질 것이다. 반대로 이들의 작전이 성공한다면, 이들은 향후 미래한국당의 서울 수복을 최전선에서 이끌 것이다. 지역기반이 서울이거나 중도보수적 입장을 가진 미래한국당 정치인들은 이번 선거에서 세 지역구에서 반드시 이기기를 간절히 기원할 것이다.
--->
 
 #### 서울 관악구 갑·을
 **복잡다난한 총선에서 가장 복잡다난한 지역구**
 
 2000~ 12년의 4번의 총선에서, 보수주류 정당은 관악구 을에서 0번, 갑에서 1번만 승리한다. 관악구는 젊은 인구구성, 서울대학교를 중심으로 한 사회개혁 여론, 상대적으로 낮은 소득수준, 높은 비율의 전라권 이주민 비중의 4가지 요소가 합쳐져 민주당계 정당의 지지세가 매우 강하다. 같은 이유로 사민주의 정당의 지역조직도 탄탄하다. 사민주의 정당은 같은 기간의 8번(갑·을) 중에서 5번이나 5%를 넘는 득표율을 기록했는데, 그 중 한 번은 민주-진보연대를 통해 당선되기도 했다(이상규: 2012, 관악구 을, 통합진보당). 
-그러나 관악구 갑·을의 현재 국회의원인 김성식(p.000 참조)과 오신환은 과거 보수주류 정당에 몸담은 적 있는 중도보수 계열 정치인이다. 2016년 총선에서 두 후보의 당선은 나름의 파란이었다. 김성식은 안철수와 함께 전라권 바깥에서 당선된 국민의당 유이의 지역구 국회의원었고, 오신환은 지역구 사상 첫 보수주류 정당(새누리당) 의원이 재선까지 성공한 경우였다. 두 의원은 2019년 바른미래당 원내대표 선거에서 맞붙을 정도로, 당내외에서 두루 인정받는 중견 정치인이 되었다. 
+그러나 관악구 갑·을의 현재 국회의원인 김성식(p.XXX 참조)과 오신환은 과거 보수주류 정당에 몸담은 적 있는 중도보수 계열 정치인이다. 2016년 총선에서 두 후보의 당선은 나름의 파란이었다. 김성식은 안철수와 함께 전라권 바깥에서 당선된 국민의당 유이의 지역구 국회의원었고, 오신환은 지역구 사상 첫 보수주류 정당(새누리당) 의원이 재선까지 성공한 경우였다. 두 의원은 2019년 바른미래당 원내대표 선거에서 맞붙을 정도로, 당내외에서 두루 인정받는 중견 정치인이 되었다. 
 관악구는 이처럼 거대양당 뿐만 아니라 3~ 4개의 다양한 정당들이 경쟁을 통해 유의미한 득표율을 기록할 수 있는 곳이다. 따라서 모든 정당이 공을 들여 난투를 벌이는 재미있는 구도를 관찰할 수 있을 것이다. 
 
 
@@ -157,30 +150,19 @@
 
 ### 주목할 지역
 
-<!--
-#### 인천 연수구 을, 경기 고양시 갑
-**사민주의 정당 비례 1번의 신화**
-이정미(2016년 정의당 비례 1번 후보)의 연수 을 출마를 통해, 심상정(2004년 민주노동당 비례 1번 후보) 이후로 `12년 만에(2008년 민주노동당 비례 1번 곽정숙은 2012년에 불출마. 2012년 통합진보당 비례  1번 윤금순은 당선 직후, 경선 부정 논란에 따른 후보 총사퇴 때 함께 사퇴.)` 사민주의 정당의 비례 1번이 지역구에서 재선에 도전한다. 비례대표를 통해 의정활동을 경험한 사민주의 정당 후보가 지역구에 등장하는 것은, 지역 전체 여론지형을 뒤집을 수 있는 문제다. 심상정
--->
 
 
 #### 인천 부평구 갑
 **문병호의 부평삼분지계**
 
-부평 갑은 2016년 총선에서 1-2위 표차가 가장 적었던 지역구(26표)다. 당시 현역 문병호가 인천에서 유일한 국민의당(민주당계 제3정당) 현역의원으로 출마했고, 득표율 기준으로 새누리당(보수주류) 34% : 더불어민주당(민주당계) 27% : 국민의당 34%로 세 당이 거의 비슷한 세력을 차지했다. 2020년 총선에서 문병호는 보수주류 정당(미래통합당)으로 당적을 옮긴 뒤 서울(영등포구 갑)로 이동하여 전략공천되었다. 지난 총선에서 국민의당을 지지한 34%의 유권자가 어디로 이동할 것인가? 문병호의 지역조직이 여전히 탄탄하다면 미래통합당으로 기울겠지만, 그를 지지한 사람들이 사실은 민주당계 정당에 표를 주었던 것이라면, 사정이 달라질 것이다.
+부평 갑은 2016년 총선에서 1-2위 표차가 가장 적었던 지역구(26표)다. 당시 현역 문병호가 인천에서 유일한 국민의당(민주당계 제3정당) 현역 재선의원으로 출마했고, 득표율 기준으로 새누리당(보수주류) 34% : 더불어민주당(민주당계) 27% : 국민의당 34%로 세 당이 거의 비슷한 세력을 차지했다. 2020년 총선에서 문병호는 보수주류 정당(미래통합당)으로 당적을 옮긴 뒤 서울(영등포구 갑)로 이동하여 전략공천되었다. 지난 총선에서 국민의당을 지지한 34%의 유권자가 어디로 이동할 것인가? 문병호의 지역조직이 여전히 탄탄하다면 미래통합당으로 기울겠지만, 그를 지지한 사람들이 사실은 민주당계 정당에 표를 주었던 것이라면, 사정이 달라질 것이다.
 
-
-<!--
-#### 경기 성남시 분당구 갑/을
-** **
-수도권에서 진격의 민주당을 보여주는 
--->
 
 
 #### 경기 용인시 정, 남양주시 갑
 **민주당 신인 정착 프로젝트**
 
-2016년 총선에 각 정당이 후보로 영입한 '인재' 중에서, 정치 고관심층이 가장 흥미롭게 바라본 후보는 표창원과 조응천이었다. 표창원은 2012년 대선 직전 "국정원의 댓글 여론조작 작업을 수행한 것으로 보이는 오피스텔은 압수수색 영장을 발부해서 수사해야 한다"는 의견을 표명함과 동시에 경찰대학교 교수직을 사임한 것으로 유명했고, 조응천은 박근혜 행정부의 대통령비서실 공직기강비서관으로 정윤회(최서원(최순실)의 전 남편)가 국정 전반에 부당한 영향력을 행사한다는 감찰보고서를 작성했다가 문건이 유출되며 검찰에 고발된 것으로 유명했다.
+2016년 총선에 각 정당이 후보로 영입한 ‘인재’ 중에서, 정치 고관심층이 가장 흥미롭게 바라본 후보는 표창원과 조응천이었다. 표창원은 2012년 대선 직전 “국정원의 댓글 여론조작 작업을 수행한 것으로 보이는 오피스텔은 압수수색 영장을 발부해서 수사해야 한다 ”는 의견을 표명함과 동시에 경찰대학교 교수직을 사임한 것으로 유명했고, 조응천은 박근혜 행정부의 대통령비서실 공직기강비서관으로 정윤회(최서원(최순실)의 전 남편)가 국정 전반에 부당한 영향력을 행사한다는 감찰보고서를 작성했다가 문건이 유출되며 검찰에 고발된 것으로 유명했다.
 
 두 인물 모두 유명하긴 하지만 2016년에 더불어민주당에 영입되어 정치활동을 전혀 하지 않았던 상태에서, 이들은 신설 지역구에 공천되어 당의 전폭적인 지원 하에 당선되었다. 더불어민주당은 상징적인 유명인사를 후보로 내세워 신설 지역구를 개척해보자는 배팅을 걸었고, 성공했다. 4년이 지나서 돌아온 총선에서, 이 때의 배팅은 어떤 결과를 불러올까? 3월 8일 현재, 표창원이 불출마를 선언한 용인 정에는 판사 출신의 영입후보 이탄희가 공천되었고, 조응천은 남양주 갑에서 재선에 도전한다. 
 
@@ -195,7 +177,7 @@
 #### 경기 평택시 갑, 용인시 병
 **중진이 빠졌다 (2)**
 
-미래통합당의 중진, 원유철(1996~ 2004, 08~ 20)과 한선교(2004~ 20)도 지역구에서 불출마한다. 다만 이들은 경선에서 탈락한 것이 아니라, 2020년 2월과 1월에 직접 불출마를 선언한 것이다. 중진의 예상치 못한 불출마는 당 바깥에서 보기에는 혁신의 산물이지만, 당 내부 입장에서는 '예상치 못한 새로운 일자리'의 등장인 셈이다. 자연스럽게 출마하려는 사람들이 엄청나게 모이기 마련이다. 
+미래통합당의 중진, 원유철(1996~ 2004, 08~ 20)과 한선교(2004~ 20)도 지역구에서 불출마한다. 다만 이들은 경선에서 탈락한 것이 아니라, 2020년 2월과 1월에 직접 불출마를 선언한 것이다. 중진의 예상치 못한 불출마는 당 바깥에서 보기에는 혁신의 산물이지만, 당 내부 입장에서는 ‘예상치 못한 새로운 일자리’의 등장인 셈이다. 자연스럽게 출마하려는 사람들이 엄청나게 모이기 마련이다. 
 
 문제는, 그 불출마 선언이 선거 투표일 약 100일, 60일 전에 발표되었다는 점이다. 처음부터 중진과 경쟁하려고 마음 먹은 후보들은 경선구도가 갑자기 뒤바뀌어 당황할 것이고, 중진이 사라졌기에 가능성을 보고 새로 들어온 후보들 역시 사전에 철저히 준비하기는 어려웠을 것이다. 또한 설령 경선을 통과하더라도, 선거를 치르기 위해 지금까지 중진이 다져놓은 지역조직을 흡수하여 활용할 수 있도록 하는 데에도 상당한 작업이 필요하다. 이 힘든 작업이 잘 이뤄지느냐에 따라, 선거구도가 급변할 수 있다. 
 
@@ -227,6 +209,7 @@
 
 #### 강원 강릉시
 **강원도의 전국구 거물**
+
 현역 강원도 국회의원 중에서 전국적으로 가장 거물이라고 할 사람은 권성동이다. 강원도 현역의원 중에서 유일한 3선 의원이고, 법사위, 환노위, 기재위 등에서 보수주류 정당의 법률/경제 관련 주장을 적극적으로 변호하는 핵심 플레이어로 활동했으며, 헌법재판소의 박근혜 대통령 탄핵심판 당시에는 법제사법위원장으로 국회를 대표하여 심판을 지휘하기도 했다. 이 이력에서 알 수 있듯, 그는 보수개혁 정당이었던 바른정당에 몸담았다가 2017년 대선 직전에 자유한국당으로 복당한 바 있다. 
 
 권성동의 당선 여부는 영동지방(태백산맥 기준 동쪽, 동해 인근 지역) 뿐만 아니라 한국 전체의 관심을 받을 것이다. 그는 동료인 염동열 의원(자유한국당, 강원 태백시-횡성군-영월군-평창군-정선군)과 함께 강원랜드에 직원 채용청탁을 알선했다는 혐의로 기소되었으나, 염동열과 달리 증거가 불충분하다는 이유로 법원은 1·2심에서 모두 무죄판결을 내린 상황이다. 여기에 바른정당에 몸담았다가 금방 탈당한 경력, 국회에서의 역할과 의정활동 행보까지 더해져서, 권성동에 대한 지역구 내 평가는 옹호와 비판이 복잡하게 뒤섞인 양상을 띨 것이다.
