--- a/06_남부지방 권역.md
+++ b/06_남부지방 권역.md
@@ -50,7 +50,7 @@
 
 대덕연구단지(대덕구가 아닌 유성구에 있다), 충남대학교와 한국과학기술원(KAIST)이 위치한 이유로, 유성구에는 “젊은 고학력 자연과학 및 공학기술 연구직” 유권자가 많다. 이 인구구성은 충청권에서 민주당계 및 사민주의 정당에게 가장 친화적인 표심으로 발현된다. 2016년 총선의 비례대표 정당투표 득표율로 보자면, 유성구는 충청권에서 유일하게 정의당이 10%를 넘게 득표한 곳이자, 충청권에서 유일하게 더불어민주당과 국민의당이 모두 새누리당(보수주류 정당)보다 많이 득표한 곳이었다. 
 
-여의도의 중앙정계에서 바라보기에, (인문학 및 사회과학 연구직종 유권자와 달리,) 자연과학 및 공학기술 연구직종 유권자의 표심 성향은 좀처럼 파악하기가 어렵다. 정책이나 이념을 바라보는 방식과 관점이 다르고, 양측이 생각하는 '정견의 일관성 및 합리성'도 다르며, 이를 밖으로 드러내서 표현하는 방식도 다르기 때문이다. 직업정치인 중에서 자연과학 및 공학기술 연구직종 유권자에 관심이 있는 분들에게는 유성구의 선거 결과(특히 비례대표 정당투표)가 자그마한 힌트가 되어줄 것이다. 
+여의도의 중앙정계에서 바라보기에, (인문학 및 사회과학 연구직종 유권자와 달리,) 자연과학 및 공학기술 연구직종 유권자의 표심 성향은 좀처럼 파악하기가 어렵다. 정책이나 이념을 바라보는 방식과 관점이 다르고, 양측이 생각하는 ‘정견의 일관성 및 합리성’도 다르며, 이를 밖으로 드러내서 표현하는 방식도 다르기 때문이다. 직업정치인 중에서 자연과학 및 공학기술 연구직종 유권자에 관심이 있는 분들에게는 유성구의 선거 결과(특히 비례대표 정당투표)가 자그마한 힌트가 되어줄 것이다. 
 
 
 #### 충북 제천시-단양군, 충남 천안시 갑
@@ -81,7 +81,7 @@
 
 이에 따라 전라권은 한동안 민주당계 정치인, 특히 80년대 김대중과 함께 제도정치 안에서 민주화운동을 진행한 정치인들에게 최후의 보루가 되었다. 이들은 보수주류 정권을 끝내고 민주당 정권을 창출하기 위해, 보수적인 제3세력 정당과도 손을 잡는 등 (좋게 말하면) 정치적 유연성을 갖추고 (나쁘게 말하면) 정치적 개혁성이 떨어지는 모습을 보여주었다. 이 부분은 80/90년대 학생운동이나 90년대 김대중의 영입을 통해 정계에 입문한 뒷세대 민주당계 정치인들과 갈라지는 중요한 차이로 드러난다. 
 
-이 차이점이 갈등으로 폭발하는 계기가 2002년 새천년민주당의 대선후보 경선이었다. 당 중진들이 직전 대선의 유력 제3후보였던 이인제를 영입하였으나, 젊은 소장파 세력이 앞세운 노무현에게 패배한 것이다. 이 때부터 20년간, 전라권은 과거의 호남 중진들과 친밀하여 상대적으로 보수적인 계파(이른바 `’동교동계’(김대중의 서울 자택이 있던 마포구 동교동에서 따온 표현.)`)와 과거의 소장파와 친밀하여 상대적으로 자유주의적인 계파(이른바 ‘친노’)로 주욱 이어지는, 민주당 내부의 당내 우파와 개혁파가 맞붙는 전장이 되었다. 보통 그 전쟁은 합쳐진 당 안에서 경선을 통해 이뤄지기도 했지만, 민주당계 정당이 둘로 나뉜 채 본선에서 맞붙기도 했다. 
+이 차이점이 갈등으로 폭발하는 계기가 2002년 새천년민주당의 대선후보 경선이었다. 당 중진들이 직전 대선의 유력 제3후보였던 이인제를 영입하였으나, 젊은 소장파 세력이 앞세운 노무현에게 패배한 것이다. 이 때부터 20년간, 전라권은 과거의 호남 중진들과 친밀하여 상대적으로 보수적인 계파(이른바 `‘동교동계’(김대중의 서울 자택이 있던 마포구 동교동에서 따온 표현.)`)와 과거의 소장파와 친밀하여 상대적으로 자유주의적인 계파(이른바 ‘친노’)로 주욱 이어지는, 민주당 내부의 당내 우파와 개혁파가 맞붙는 전장이 되었다. 보통 그 전쟁은 합쳐진 당 안에서 경선을 통해 이뤄지기도 했지만, 민주당계 정당이 둘로 나뉜 채 본선에서 맞붙기도 했다. 
 
 총선을 앞두고 민주당계 정당이 갈라져서 ‘민주당계 주류정당’과 ‘전라권 민주당계 제3정당’으로 맞선 경우는, 지금까지 2004년 총선과 2016년 총선의 두 번 있었다. 2003년에 노무현 대통령을 지지하던 새천년민주당 및 한나라당(보수주류 정당) 안의 개혁세력이 탈당하여 열린우리당을 창당한다. 당시 전라권 지역구의원 29명 중 9명이 열린우리당에 합류했는데, 2004년 총선에서는 총 31석 중 열린우리당 25석, 새천년민주당 5석의 결과가 나왔다. 두 당이 2007년에 다시 통합된 이후, 2015년에는 이른바 ‘친노’와 갈등이 있는 ‘비노’계열 정치인들이 당시 갓 민주당계 정당에 입당한 안철수와 함께 새정치민주연합(더불어민주당)을 탈당하여 국민의당을 창당한다. 이 때는 전라권 지역구의원 30명 중 12명이 국민의당에 합류했고, 2016년 총선에서는 총 28석 중 더불어민주당 3석, 국민의당 23석의 결과가 나왔다. 
 결과만 놓고 보면, 지금까지 전라권의 민주당계 정당 지지자들은 어느 쪽이든 새로 창당한 정당에 더 많은 힘을 실어주었다. 전라권 유권자가 현재의 민주당계 정당 체계가 변화하기를 오랫동안 바라고 있다는 의미로 해석할 수 있다. 2020년 총선에서는 그 변화의 4년에 대한 냉정한 평가가 이뤄질 것이다. 
@@ -119,7 +119,7 @@
 #### 전북 남원시-임실군-순창군
 **후보들에겐 슬픈 전설이 있어 (1)**
 
-2016년 총선에서 `가장 많은 후보(8명)(“정치 1번지”라는 상징성 때문에 모든 정당이 왠만하면 꼭 출마하는 서울 종로구(10명)는 제외한다.)`가 출마한 첫 번째 지역구는 남원-임실-순창이다. 이 지역구에는 2012년 총선(당시 "남원시-순창군" 지역구)의 양강 후보였던 이강래와 강동원의 슬픈 전설이 담겨있다. 
+2016년 총선에서 `가장 많은 후보(8명)(“정치 1번지”라는 상징성 때문에 모든 정당이 왠만하면 꼭 출마하는 서울 종로구(10명)는 제외한다.)`가 출마한 첫 번째 지역구는 남원-임실-순창이다. 이 지역구에는 2012년 총선(당시 “남원시-순창군 ” 지역구)의 양강 후보였던 이강래와 강동원의 슬픈 전설이 담겨있다. 
 2012년 총선에서, 당시 현역 3선의원이던 민주당계(민주통합당) 이강래와 국회의원 첫 출마인 사민주의 정당(통합진보당) 강동원이 맞붙었고, 여기서 강동원이 승리하여 당시에는 이변으로 받아들여졌다. 그러나 2014년, 강동원이 돌연 사민주의 정당(정의당)을 탈당하고, 안철수가 추진하던 신당에 합류하려다가 안철수와 함께 민주당계 정당(새정치민주연합)에 입당한다. 2016년 총선 직전, 이강래는 강동원을 피해 서울 서대문구 을로 지역구를 옮기지만 경선에서 패배한다. 한편 강동원은 그대로 남원-임실-순창에 출마하지만 경선에서 컷오프당하고, 이에 반발해 무소속으로 출마한다. 가장 강력한 후보 2명이 이렇게 모두 민주당계 정당을 떠나자, 그 기회를 노린 후보들이 쏟아져 나온다. 2016년의 승리자는 국민의당의 이용호.
 
 그리고 2020년, 이번에는 현역 이용호가 무소속으로 출마하며, 이강래는 `한국도로공사 사장(그가 사장으로 재임하던 시절 한국도로공사에서 일어난 사건이 있다. 3권 ‘위원회와 주요 이슈 (1)’, p.XXX 참고.)`을 역임하다가 다시 남원-임실-순창으로 복귀, 더불어민주당으로 출마한다. 강동원은 불출마를 선언한다. 
@@ -134,9 +134,9 @@
 #### 전북 전주시 을, 전남 순천시-광양시-곡성군-구례군 갑
 **오늘의 관광코스: 새누리당의 유적지**
 
-새누리당(보수주류 정당)이 200석도 차지할 수 있다고들 예상했던 2016년 총선(실제 122석)에서, 새누리당은 전라권에서 만큼은 지역구를 2석이나 확보하는 큰 성과를 거뒀다. 그 이후의 정치지형 급변으로 인해, 당시 승리 지역구인 전주 을과 `순천-광양-곡성-구례 갑(2016년 당시 "순천시" 지역구. 인구변동으로 인해 2020년 총선에서는 해룡면을 제외한 순천시 일원을 '갑', 해룡면을 광양-곡성-구례와 합쳐서 '을' 지역구로 개편된다.)`은 현역 의원(정운천, 이정현)이 모두 해당 지역에서 불출마한다. 여러가지 이유가 있겠지만, 재선의 가능성이 낮다는 것이 가장 큰 문제였을 것이다. 
+새누리당(보수주류 정당)이 200석도 차지할 수 있다고들 예상했던 2016년 총선(실제 122석)에서, 새누리당은 전라권에서 만큼은 지역구를 2석이나 확보하는 큰 성과를 거뒀다. 그 이후의 정치지형 급변으로 인해, 당시 승리 지역구인 전주 을과 `순천-광양-곡성-구례 갑(2016년 당시 “순천시 ” 지역구. 인구변동으로 인해 2020년 총선에서는 해룡면을 제외한 순천시 일원을 ‘갑’, 해룡면을 광양-곡성-구례와 합쳐서 ‘을’ 지역구로 개편된다.)`은 현역 의원(정운천, 이정현)이 모두 해당 지역에서 불출마한다. 여러가지 이유가 있겠지만, 재선의 가능성이 낮다는 것이 가장 큰 문제였을 것이다. 
 
-이 빈자리의 표심이 어떻게 이동할 것인지는 중요하다. 2016년 당시를 기준으로 보자면, 새누리당을 향한 표심은 우파적 성향이라기보다는, "더불어민주당 후보를 떨어뜨릴 수 있는 후보"에게 향한 표심이었다고 보아야 할 것 같다. 전북/전남에서 더불어민주당 후보들이 대체로 35~45%의 득표율을 올렸던 경향은 해당 지역구에서도 유사하게 이뤄졌지만, 전북/전남에서 국민의당 후보들이 대체로 얻었던 득표율(40~50%)과 비교할 때 해당 지역구 국민의당 후보의 득표율은 턱없이 적다. 
+이 빈자리의 표심이 어떻게 이동할 것인지는 중요하다. 2016년 당시를 기준으로 보자면, 새누리당을 향한 표심은 우파적 성향이라기보다는, “더불어민주당 후보를 떨어뜨릴 수 있는 후보 ”에게 향한 표심이었다고 보아야 할 것 같다. 전북/전남에서 더불어민주당 후보들이 대체로 35~ 45%의 득표율을 올렸던 경향은 해당 지역구에서도 유사하게 이뤄졌지만, 전북/전남에서 국민의당 후보들이 대체로 얻었던 득표율(40~ 50%)과 비교할 때 해당 지역구 국민의당 후보의 득표율은 턱없이 적다. 
 
 
 ## 제주특별자치도
@@ -189,7 +189,7 @@
 
 다만 2000년대까지만 해도 보수주류 정당과 대항하는 두 명의 중요 정치인이 있었다. 한 명은 포항제철(현 POSCO) 설립기의 회장을 역임한 `박태준(포항시 북구: 1997~ 2000)`이고, 또 한 명은 노태우와 김대중 행정부에서 각각 청와대 비서관으로 일한 `김중권(영덕군-청송군-울진군: 1981~ 92)`이다. 두 인물 모두 보수주류 정당을 통해 군사정권에 직간접적으로 참여했지만, 경북권으로 세력을 넓히려던 김대중이 그 경력을 이용하고자 이들과 손을 잡기도 하였다. 두 사람 모두 1997년 대선에서 김대중을 지지했고, 박태준은 민주당계 정당과 공동정권을 꾸린 제3지대 정당(자유민주연합)에 입당했으며, 김중권은 민주당계 정당(새천년민주당)에 입당하여 2000년 총선에서 봉화군-울진군 선거구에서 불과 19표(득표율 0.04%p) 차이로 낙선하는 대선전을 거둔다. 이 시절의 향기가 남아있는 경상북도는 한 때, 민주당계 정당에 있어서 승부를 걸어보기에 대구보다도 더 좋은 지역으로 통했다. 
 
-가장 최근 선거인 2016년 총선과 2018년 지방선거에서, 2000년대의 ‘향기’가 대구 인근 지역과 구미에서 다시 피어오르기 시작했다. 이 내용은 ‘주목할 지역’ 내용에서 설명하도록 하겠다. 
+가장 최근 선거인 2016년 총선과 2018년 지방선거에서, 2000년대의 ‘향기’가 대구 인근 지역과 구미에서 다시 피어오르기 시작했다. 이 내용은 ‘주목할 지역’ 내용에서 설명하겠다. 
 
 
 - - -
@@ -207,7 +207,7 @@
 #### 경북 포항시 북구
 **“경상북도 종로구”**
 
-경상북도 안에서도 서울의 종로구(5권 ‘중부지방 권역’, p.XXX 참고)와 같이 거물급만 출마하는 곳이 있으니, 포항 북구다. 전두환 보안사령관의 비서실장이자 전두환 행정부의 대통령비서실 비서실보좌관으로 `"실세 쓰리허"(허삼수 대통령비서실 사정수석비서관, 허문도 대통령비서실 공보비서관을 합하여, 전두환 행정부의 실세 3인을 가리킨 표현. 세 명 모두 전두환의 쿠데타 당시 전두환의 비서실장 또는 국군기무사 인사처장을 맡고 있었다.)`라고 불리운 허화평(1992~ 97), 포항제철 회장 박태준(97~ 2000), 국회부의장을 지낸 이병석(2000~ 16)이 포항 북구에서 국회의원을 지냈다. 
+경상북도 안에서도 서울의 종로구(5권 ‘중부지방 권역’, p.XXX 참고)와 같이 거물급만 출마하는 곳이 있으니, 포항 북구다. 전두환 보안사령관의 비서실장이자 전두환 행정부의 대통령비서실 비서실보좌관으로 `“실세 쓰리허 ”(허삼수 대통령비서실 사정수석비서관, 허문도 대통령비서실 공보비서관을 합하여, 전두환 행정부의 실세 3인을 가리킨 표현. 세 명 모두 전두환의 쿠데타 당시 전두환의 비서실장 또는 국군기무사 인사처장을 맡고 있었다.)`라고 불리운 허화평(1992~ 97), 포항제철 회장 박태준(97~ 2000), 국회부의장을 지낸 이병석(2000~ 16)이 포항 북구에서 국회의원을 지냈다. 
 
 특이하게도, 민주당계 정당과 사민주의 정당에서도 2008년 총선부터는 언제나 `경북도당위원장(한국의 정당은 <정당법>에 의해, 각 시·도별 지부인 광역시·도당을 설치하고 그 대표인 위원장을 둔다)`이 포항 북구에 출마했다. 오중기(2008/16 출마), 유성찬(2012 출마), 박창호(2016 출마) 세 명은 총선 당시 각 정당의 경북도당위원장 또는 부위원장을 맡고 있었고, 세 명 모두 도당위원장을 맡은 상태에서 경북도지사 선거에 출마한 이력도 가지고 있다. 2020년 총선에서 정의당(사민주의 정당)은 역사상 최초로 지역구 국회의원후보 경선을 치르게 되었는데, 그 지역구 역시 포항 북구였다. 
 
@@ -239,7 +239,7 @@
 1971년 총선에서는 부산직할시-경상남도 지역구 26석 중 15석을 민주당계 정당(신민당)에게 안겨주면서, 보수주류 정당(민주공화당)이 더이상 단독으로 헌법을 바꾸지 못하게 되었다. 이 때 박정희 대통령은 국회를 강제해산하고 유신헌법을 발표해서 집권당이 국회 2/3 이상의 의석을 `언제나 차지할 구조(전체 국회의원의 1/3을 대통령이 임명하며, 나머지 국회의원은 1지역구마다 2명이 당선되도록 해서 3위 바깥으로 밀려나기 어려운 집권당 후보의 당선을 사실상 보장했다.)`를 만들었다. 그러나 1978년 총선의 부산에서 민주공화당 후보가 단 1명도 1위를 차지하지 못하는 일이 벌어졌고, 이 심각한 민심이반은 1979년 부산과 마산 시민들의 대규모 민주화 집회(부마민주항쟁)로 표출되어 1기 군사정권의 종말을 앞당겼다. 
 여전히 1선거구마다 2명이 당선되는 제도에서, 1985년 총선에서는 전두환 행정부의 집권당(민주정의당)에 큰 경종을 울린다. 민주정의당은 부산 전체 12석 중 3석밖에 승리하지 못하는데, 부산의 민주당계 정당들이 “엄마는 민주한국당, 아빠는 신한민주당”이라는 구호와 함께 1, 2위를 함께 차지하는 전략을 앞세운 것에 부산시민들이 호응한 것이다. 이 결과로 민주정의당은 `지역구에서 과반을 차지하는 데 실패(득표율과 상관 없이 지역구 1위 정당에게 전체 의석의 22%를 배정해주는 전국구 제도가 있어서, 전체 숫자로는 과반을 차지했다.)`하여 정국 주도권이 크게 흔들렸고, 향후 3년간 대통령 직선제 쟁취와 노동운동 합법화로 이어지는 민주화 정국이 열린다. 
 
-민주화 이후 90년대까지 경남권은 일관되게 김영삼을 중심으로 한 보수적이고 자유주의적인 민주화 세력, 이른바 `’상도동계’(김영삼의 서울 자택이 있던 동작구 상도동에서 따온 표현.)`, ‘민주자유당 민주계’를 전폭적으로 지원했다. 이 지지세는 김영삼이 3당합당을 통해 보수주류 정당(민주자유당)에 합류한 이후에도 계속되었고, 결과적으로 경남권 전반의 표심이 보수적으로 기우는 계기가 되었다. 하지만 “호랑이를 잡기 위해 호랑이 굴로 들어간다”(3당합당 당시, 김영삼 통일민주당 총재의 발언)는 표현처럼 경남권의 상도동계는 보수주류 정당 안에서 매우 전투적으로 움직여서, 전두환의 군사쿠데타를 기획했던 국군 내 사조직 ‘하나회’ 숙청, 공직자 재산공개 의무화, 전두환과 노태우의 비자금 재판 성사, 12·12 및 5·18 관련 재수사 및 재판 성사, 금융실명제 및 지방자치제 도입 등을 보수주류 정당의 틀 안에서 어떻게든 이끌어냈다. 경남권의 탄탄한 지지가 없었다면 이런 흐름이 생기기는 어려웠을 것이다.
+민주화 이후 90년대까지 경남권은 일관되게 김영삼을 중심으로 한 보수적이고 자유주의적인 민주화 세력, 이른바 `‘상도동계’(김영삼의 서울 자택이 있던 동작구 상도동에서 따온 표현.)`, ‘민주자유당 민주계’를 전폭적으로 지원했다. 이 지지세는 김영삼이 3당합당을 통해 보수주류 정당(민주자유당)에 합류한 이후에도 계속되었고, 결과적으로 경남권 전반의 표심이 보수적으로 기우는 계기가 되었다. 하지만 “호랑이를 잡기 위해 호랑이 굴로 들어간다”(3당합당 당시, 김영삼 통일민주당 총재의 발언)는 표현처럼 경남권의 상도동계는 보수주류 정당 안에서 매우 전투적으로 움직여서, 전두환의 군사쿠데타를 기획했던 국군 내 사조직 ‘하나회’ 숙청, 공직자 재산공개 의무화, 전두환과 노태우의 비자금 재판 성사, 12·12 및 5·18 관련 재수사 및 재판 성사, 금융실명제 및 지방자치제 도입 등을 보수주류 정당의 틀 안에서 어떻게든 이끌어냈다. 경남권의 탄탄한 지지가 없었다면 이런 흐름이 생기기는 어려웠을 것이다.
 
 경남권의 표심이 본격적으로 노동운동을 향하게 된 것은 사민주의 정당이 탄생한 2000년부터였다. 중화학 제조업이 밀집한 울산, 창원, 거제 등에서 노동조합으로 조직된 노동자가 일제히 사민주의 정당에 지지를 보내기 시작했고, 그 외에도 사민주의 정당이 보수주류 정당을 견제할 주요세력이 될 수 있다고 생각한 유권자들도 지지를 보내기 시작했다. 사상 처음으로 비례대표 정당투표가 시작된 2004년 총선에서, 울산과 경남은 사민주의 정당(민주노동당)에 각각 21.9%, 15.8%의 득표율을 안기고, 각각 지역구 국회의원 1석씩을 당선시켰다. 울산과 경남의 강력한 지지를 바탕으로 국회에는 처음으로 노동, 부의 분배, 복지, 일반시민의 민권, 소수자 문제 등 사회민주주의의 목소리가 국회로 들어갈 수 있었다. 
 
@@ -268,7 +268,7 @@
 하여 민주노동당이 창당한 2000년부터 울산에서는, 경상권 및 현대 사측이 밀어주는 보수주류 정당과, 제조업 노동자가 밀어주는 진보정당이 오랜 기간동안 거대양당으로 활동했다. 그 이전까지는 민주당계 정당 안의 노동 친화적인 후보들이 일부 두각을 나타내기도 했으나, 2000-10년대에 민주당계 정당은 후보를 내지 못하거나, 진보정당 노동자 후보에게 단일후보 자리를 양보하거나, 겨우 당선된 `강길부(울주군, 2004~ )`가 3년 만에 보수주류 정당으로 이적하는 등, 울산에서 제대로 자리잡지 못했다. 다만 2018년 지방선거와 함께 치러진 울산 북구 국회의원 재선거에서, 더불어민주당 이상헌 후보가 48.47%의 득표율로 당선되었다.
 
 ### 창원, 김해, 양산, 거제
-부산과 맞닿은 4개 도시에서도, 2000년대부터 두 가지 갈래에서 민주당계 정당과 사민주의 정당이 상대적으로 강세를 보인다. 첫 번째 갈래는 조선소, 기계공업 등 대형 중공업 공장 노동자를 통해 조직된 지지세이고, 두 번째 갈래는 김해 봉하마을 태생의 노무현이 중앙정계에 부상하며 생겨난 지지세이다. 2012년 총선 비례대표 정당투표의 지지율을 보면 두 갈래의 차이가 명확하게 보인다. `’마창진 통합’(2010년에 마산시, 창원시, 진해시가 통합되어 현재의 (통합)창원시가 출범했다. 현재의 창원시에서 마산회원구와 마산합포구가 구 마산시, 의창구와 성산구가 구 창원시, 진해구가 구 진해시 지역이었다.)` 이전의 구 창원과 거제에서는 사민주의 정당(통합진보당, 진보신당)의 득표율이 18% 대에 육박하지만, 민주당계 정당(민주통합당)의 득표율은 경남 평균인 25%를 크게 벗어나지 않았다. 반대로 김해와 양산에서 민주통합당 득표율은 35~ 40%대에 이르고, 사민주의 정당들은 모두 득표율 10% 미만으로 평균 이하를 기록했다. 
+부산과 맞닿은 4개 도시에서도, 2000년대부터 두 가지 갈래에서 민주당계 정당과 사민주의 정당이 상대적으로 강세를 보인다. 첫 번째 갈래는 조선소, 기계공업 등 대형 중공업 공장 노동자를 통해 조직된 지지세이고, 두 번째 갈래는 김해 봉하마을 태생의 노무현이 중앙정계에 부상하며 생겨난 지지세이다. 2012년 총선 비례대표 정당투표의 지지율을 보면 두 갈래의 차이가 명확하게 보인다. `‘마창진 통합’(2010년에 마산시, 창원시, 진해시가 통합되어 현재의 (통합)창원시가 출범했다. 현재의 창원시에서 마산회원구와 마산합포구가 구 마산시, 의창구와 성산구가 구 창원시, 진해구가 구 진해시 지역이었다.)` 이전의 구 창원과 거제에서는 사민주의 정당(통합진보당, 진보신당)의 득표율이 18% 대에 육박하지만, 민주당계 정당(민주통합당)의 득표율은 경남 평균인 25%를 크게 벗어나지 않았다. 반대로 김해와 양산에서 민주통합당 득표율은 35~ 40%대에 이르고, 사민주의 정당들은 모두 득표율 10% 미만으로 평균 이하를 기록했다. 
 
 두 지지층 모두 보수주류 정당에 대한 반감이 확실하기 때문에 지역구에서의 후보 단일화가 곧잘 이뤄져서 꽤 많은 승리를 거뒀다. 창원에서 사민주의 정당의 `권영길(창원시 을: 2004~ 12)`과 `노회찬(창원시 성산구: 2016~ 18)`, 김해에서 민주당계 정당의 `최철국(김해시 을: 2004~ 10)`과 `김경수(김해시 을: 2016~ 18)`처럼, 각 당에서 높은 이름값과 많은 역할을 부여받은 인물이 계속해서 당선되었다. 
 하지만 두 정당의 승리가 늘 쉽지는 않았다. 본디 `이주영(창원시 을: 2000~ 04, 마산시 갑·창원시 마산합포구: 2006~ )`, `김기춘(거제시: 1996~ 2008)`, `김태호(김해시 을: 2011~ 16)` 등의 보수주류 정당 중진이 꾸준히 배출되던 지역이기도 하다. 가장 최근의 2019년 창원시 성산구의 보궐선거에서, 민주당과 단일화에 성공한 사민주의 정당(여영국, 정의당)은 보수주류 정당(강기윤, 자유한국당)을 상대로 불과 504표, 0.54%p 차이로 간신히 승리했다. 
@@ -293,11 +293,9 @@
 #### 부산 부산진구 갑
 **부산 한가운데의 파란 깃발 선봉장**
 
-부산의 한가운데, 부산진 갑 선거구는 더불어민주당 부산시당에게 매우 각별한 상징성을 가진다. 이 지역구의 현역, 김영춘의 독특한 입지 때문이다. 부산 태생으로 민주당계 정당의 총재였던 김영삼의 비서로 들어가서 정치에 입문했고, 김영삼의 3당 합당에 환멸을 느끼며 대학원에 들어갔고, 김영삼의 "호랑이 굴에 들어가서 호랑이를 잡는 싸움을 도와달라"는 말에 다시 보수주류 정당으로 합류했으며, 서울(광진구 갑)에서 국회의원에 당선된 뒤 보수주류 정당의 개혁 가능성이 없다고 판단하고 `동료 의원 4명(이부영(탈당 당시, 서울 강동 갑), 이우재(서울 금천), 안영근(인천 남구 을), 김부겸(경기 군포). 김영춘까지 5인을 "독수리 5형제"라고 불렀다.)`과 민주당계 정당(열린우리당) 입당. 그리고 2012년 부산 출마를 선언하며 부산으로 이주. 2012년 보수주류 정당 후보(나성린, 새누리당)에게 약 4%p 차이로 (부산으로서는) 아깝게 낙선한 뒤, 2016년 같은 상대에게 3%p 차이고 어렵게 승리.
+부산의 한가운데, 부산진 갑 선거구는 더불어민주당 부산시당에게 매우 각별한 상징성을 가진다. 이 지역구의 현역, 김영춘의 독특한 입지 때문이다. 부산 태생으로 민주당계 정당의 총재였던 김영삼의 비서로 들어가서 정치에 입문했고, 김영삼의 3당 합당에 환멸을 느끼며 대학원에 들어갔고, 김영삼의 “호랑이 굴에 들어가서 호랑이를 잡는 싸움을 도와달라 ”는 말에 다시 보수주류 정당으로 합류했으며, 서울(광진구 갑)에서 국회의원에 당선된 뒤 보수주류 정당의 개혁 가능성이 없다고 판단하고 `동료 의원 4명(이부영(탈당 당시, 서울 강동 갑), 이우재(서울 금천), 안영근(인천 남구 을), 김부겸(경기 군포). 김영춘까지 5인을 “독수리 5형제 ”라고 불렀다.)`과 민주당계 정당(열린우리당) 입당. 그리고 2012년 부산 출마를 선언하며 부산으로 이주. 2012년 보수주류 정당 후보(나성린, 새누리당)에게 약 4%p 차이로 (부산으로서는) 아깝게 낙선한 뒤, 2016년 같은 상대에게 3%p 차이고 어렵게 승리.
 
-부산에서 태어나 김영삼의 직계로 정치를 배웠고, 서울에서 보수주류 정당을 경험한 후 민주당계 정당으로 합류한 뒤, 다시 부산에서 도전하여 부산 민주당 최다선 중진이 되기까지, 그 긴 과정을 통해 김영춘은 "김영삼의 정치철학이 부산에서 다시 민주당계 정당으로 돌아오는" 것을 보여주는 상징적인 인물로 자리잡았다. 그의 당락 자체가 곧 부산의 정치지형, 나아가 한국의 정치지형을 변화시킬 파급력있는 사건이 될 것이다. 
-
-<!--#### 부산 연제구 (더민주로 보내?)-->
+부산에서 태어나 김영삼의 직계로 정치를 배웠고, 서울에서 보수주류 정당을 경험한 후 민주당계 정당으로 합류한 뒤, 다시 부산에서 도전하여 부산 민주당 최다선 중진이 되기까지, 그 긴 과정을 통해 김영춘은 “김영삼의 정치철학이 부산에서 다시 민주당계 정당으로 돌아오는 ” 것을 보여주는 상징적인 인물로 자리잡았다. 그의 당락 자체가 곧 부산의 정치지형, 나아가 한국의 정치지형을 변화시킬 파급력있는 사건이 될 것이다. 
 
 <!--#### 부산 사상구-->
 
@@ -308,11 +306,12 @@
 
 그 주인공인 강길부를 살펴보자. 2004년 민주당계 정당(열린우리당)으로 초선, 2008년 보수주류 정당(한나라당)에 입당했다가 공천탈락 후 무소속으로 출마해 재선. 한나라당 복당 후 2012년 3선. 2016년 공천탈락 후 무소속으로 출마해 4선. 다시 새누리당에 복당하였으나 박근혜 대통령 탄핵과 바른정당(탄핵 찬성파) 분당 시점에 바른정당 합류. 2017년 다시 보수주류 정당(자유한국당)으로 이동했다가 홍준표(당시 당대표)를 비판하며 2018년 탈당. 2020년 3월 8일 현재 무소속. 
 
-문제는 그가 3월 8일 현재까지도 예비후보 등록을 하지 않았다는 점. 2020년에 출마를 하든 불출마를 하든, 울주군의 선거는 격변을 겪을 것이다. 출마를 하지 않는다면 후보들이 그의 지지를 받아 지역조직과 지지세를 등에 업기 위해 갖은 애를 쓸 것이다. 출마한다면… 목포 선거구(p. XXX)를 읽어보자.
+문제는 그가 3월 8일 현재까지도 예비후보 등록을 하지 않았다는 점. 2020년에 출마를 하든 불출마를 하든, 울주군의 선거는 격변을 겪을 것이다. 출마를 하지 않는다면 후보들이 그의 지지를 받아 지역조직과 지지세를 등에 업기 위해 갖은 애를 쓸 것이다. 출마한다면… 목포 선거구(p.XXX)를 읽어보자.
 
 <!--#### 경남 창원시 성산구-->
 
 #### 경남 거제시, 양산시 을
+**건곤일척의 싸움**
 민주당계 정당과 보수주류 정당이 모두 피튀기는 공성/수성전을 펼칠 경상남도에서, 가장 주의깊게 보아야 할 지역 2개가 있다. 거제시는 보수주류 정당(새누리당)의 2016년 최소 득표율차 당선지역, 양산시 을은 민주당계 정당(더불어민주당)의 2016년 최소 득표율차 당선지역이다. 더불어민주당은 노동자가 밀집한 거제에서 반드시 당선되고 싶어할 것이고, 미래통합당은 현역 서형수 의원이 불출마한 지금 양산 을을 탈환해야만 한다고 생각할 것이다. 
 2016년 총선에서는 두 지역구 모두 복수의 무소속 후보가 등장해서, 도합 10~20%의 득표율을 가져간 바 있다. 4년이 지난 지금 이들의 표심 향방이, 두 정당의 운명을 가를 것이다. 
 
